--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -258,7 +258,7 @@ module.LeagueNewsFilter.desc=Označava timove na stranici lige koji su nedavno p
 module.LeagueNewsFilter.all.desc=Prikazuj sve vijesti
 module.LeagueNewsFilter.friendlies.desc=Prikaži samo međunarodne prijateljske utakmice i promjene trenera
 module.LeagueNewsFilter.transfers.desc=Prikaži samo transfere
-module.LeagueNewsFilter.lineupChanges.desc=Prikaži samo promjene naloga za mečeve
+module.LeagueNewsFilter.lineup_changes.desc=Prikaži samo promjene naloga za mečeve
 
 
 
@@ -434,13 +434,13 @@ ForumPreview.preview=Izgled poruke
 ForumPreview.send=Pošalji
 
 #Forums
-copy.PostID=Kopiraj postID u clipboard
-CopyPosting=Kopiraj poruku u %s stilu
-CopyPosting.abbr=Kopiraj u %s stilu
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=neobrađeno
-CopyPosting.style.last=posljednje
+copy.postid=Kopiraj postID u clipboard
+copy.posting.title=Kopiraj poruku u %s stilu
+copy.posting=Kopiraj u %s stilu
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=neobrađeno
+copy.posting.style.last=posljednje
 
 ForumYouthIcons.toolbar.youth=Linkovi za juniore
 ForumYouthIcons.toolbar.main=Glavni linkovi
@@ -672,26 +672,26 @@ sidebarBox.actions=Radnje
 # Look on your players page (Club -> Players) to the box title on the right with the list of players
 
 ManagerButtons.writeInGuestbook=Upišite se u knjigu gostiju
-copy.copyplayerad=Iskopirajte podatke o igraču u clipboard
-copy.copied=Podaci o igraču su iskopirani u clipboard
+copy.playerad=Iskopirajte podatke o igraču u clipboard
+copy.playerad.copied=Podaci o igraču su iskopirani u clipboard
 
 
-CopyRatings.both=Kopiraj ocjene (u HT-ML)
-CopyRatings.home=Kopiraj ocjene domaćeg tima (u HT-ML)
-CopyRatings.away=Kopiraj ocjene gostujućeg tima (u HT-ML)
-CopyRatings.copied=Ocjene su uspјešno iskopirane u clipboard.
+copy.ratings.both=Kopiraj ocjene (u HT-ML)
+copy.ratings.home=Kopiraj ocjene domaćeg tima (u HT-ML)
+copy.ratings.away=Kopiraj ocjene gostujućeg tima (u HT-ML)
+copy.ratings.copied=Ocjene su uspјešno iskopirane u clipboard.
 copy.youthclub=hattrick-youthclub.org
 
-copy.copy.skilltable=Kopiraj tabelu s vještinama u clipboard (u HT-ML)
+copy.skilltable.title=Kopiraj tabelu s vještinama u clipboard (u HT-ML)
 
 
 
 
 
-copy.copied.skilltable=Izvorni kod tabele s vještinama je kopiran u clipboard.
-copy.copied.matchid=ID utakmice je kopiran u clipboard.
-copy.copied.postid=Post ID [post=%s] je kopiran u clipboard.
-copy.copied.posting=Post %s je kopiran u clipboard.
+copy.skilltable.copied=Izvorni kod tabele s vještinama je kopiran u clipboard.
+copy.matchid.copied=ID utakmice je kopiran u clipboard.
+copy.postid.copied=Post ID [post=%s] je kopiran u clipboard.
+copy.posting.copied=Post %s je kopiran u clipboard.
 
 #matches
 matches.attackdefensebars=Napad-Odbrana
@@ -737,7 +737,7 @@ YouthMatches=Utakmice juniora
 more=više...
 less=manje...
 
-total_stars=Ukupno zvijezda
+matches.lineup.totalStars=Ukupno zvijezda
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Prikaži mapu
@@ -750,7 +750,7 @@ flagCollectionToMap.SAmerica=Južna Amerika
 flagCollectionToMap.World=Svijet
 
 # SkillTable
-Skill_table=Tabela vještina
+SkillTable.header=Tabela vještina
 
 Nationality=Nacionalnost
 Nationality.abbr=Nac
@@ -792,7 +792,7 @@ Filters.maximum=Najviše
 RapidId.viewById=Pregled prema ID-u
 
 # SkillTable
-Switch_view.title=Promijeni pregled tabele.
+SkillTable.switchView.title=Promijeni pregled tabele.
 
 # External Chat
 module.LeagueAndMatchChat.MatchChat=Non HT chat o utakmici
@@ -810,7 +810,7 @@ HTMSPrediction.changePrediction=Promijeni pretpostavku
 #actions
 button.copy=Kopiraj
 RapidId.view=Pogledaj
-Switch_view=Promijeni pogled
+SkillTable.switchView=Promijeni pogled
 Filter=Filter
 
 # buttons
