--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -220,7 +220,7 @@ module.LeagueNewsFilter.desc=A la pàgina de la lliga marca els equips que recen
 module.LeagueNewsFilter.all.desc=Monstre totes les notícies
 module.LeagueNewsFilter.friendlies.desc=Mostra només els amistosos internacionals i els canvis d'entrenador
 module.LeagueNewsFilter.transfers.desc=Mostra només les transferències
-module.LeagueNewsFilter.lineupChanges.desc=Mostra només els canvis de la alineació
+module.LeagueNewsFilter.lineup_changes.desc=Mostra només els canvis de la alineació
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Mou el nombre de mànagers connectats a la part de dalt de les pàgines de regions. Advertència, això pot fer que vagi molt lenta la càrrega de la pàgina en cas de que hi hagi més de 100.
 module.TeamPopupLinks.TeamLinks.desc=Afegeix «TeamPopupLinks» als enllaços d'equips
@@ -457,9 +457,9 @@ categories.E2=E2
 
 
 # SkillTable
-Skill_table=Taula d'habilitats
-Switch_view=Canvi de vista
-Switch_view.title=Canvia la visualització de la taula.
+SkillTable.header=Taula d'habilitats
+SkillTable.switchView=Canvi de vista
+SkillTable.switchView.title=Canvia la visualització de la taula.
 PlayerNumber=Dorsal
 PlayerNumber.abbr=\#
 TSI=Índex Total d'Habilitats (TSI)
@@ -575,29 +575,29 @@ copy.ht-ml=Copia com HT-ML
 copy.table=Copia la taula en HT-ML
 
 #copy
-copy.copyplayerad=Copia l’anunci del jugador al porta-retalls
-copy.copied=S’ha copiat l’anunci de jugador al porta-retalls.
+copy.playerad=Copia l’anunci del jugador al porta-retalls
+copy.playerad.copied=S’ha copiat l’anunci de jugador al porta-retalls.
 copy.matchid=Fe-ho clic per copia al porta-retalls la id del partit
 
-copy.PostID=Copia la id de missatge al porta-retalls
-CopyPosting=Copia el missatge amb estil %s
-CopyPosting.abbr=Copia amb estil %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=en brut
-CopyPosting.style.last=últim
+copy.postid=Copia la id de missatge al porta-retalls
+copy.posting.title=Copia el missatge amb estil %s
+copy.posting=Copia amb estil %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=en brut
+copy.posting.style.last=últim
 
-CopyRatings.both=Copia els ratis (HT-ML)
-CopyRatings.home=Copia els ratis de l'quip casolà (HT-ML)
-CopyRatings.away=Copia els ratis de l'equip forà (HT-ML)
-CopyRatings.copied=S’han copiat els ratis al porta-retalls.
+copy.ratings.both=Copia els ratis (HT-ML)
+copy.ratings.home=Copia els ratis de l'quip casolà (HT-ML)
+copy.ratings.away=Copia els ratis de l'equip forà (HT-ML)
+copy.ratings.copied=S’han copiat els ratis al porta-retalls.
 
 
-copy.copy.skilltable=Copia la taula d'habilitats al porta-retalls (HT-ML)
-copy.copied.skilltable=S’han copiat les dades de la taula d'habilitats al porta-retalls.
-copy.copied.matchid=S’ha copiat l'identificador de partit al porta-retalls.
-copy.copied.postid=El ID de missatge [post\=%s] s'ha copial al porta-retalls.
-copy.copied.posting=S’han copiat els missatge %s al porta-retalls.
+copy.skilltable.title=Copia la taula d'habilitats al porta-retalls (HT-ML)
+copy.skilltable.copied=S’han copiat les dades de la taula d'habilitats al porta-retalls.
+copy.matchid.copied=S’ha copiat l'identificador de partit al porta-retalls.
+copy.postid.copied=El ID de missatge [post\=%s] s'ha copial al porta-retalls.
+copy.posting.copied=S’han copiat els missatge %s al porta-retalls.
 
 #matches
 matches.income=Ingressos\:
@@ -609,7 +609,7 @@ matches.defense=de.
 matches.attack=at.
 matches.indfreekick=Tirs Lliures indirectes
 matches.wronglang=FoxTrick\: No es poden mostrar les qualificacions ja que, o la vostra llengua no està registrada, o heu seleccionat en les preferències una llengua incorrecta. Comproveu que el vostre idioma a FoxTrick és el mateix que el de hattrick.
-total_stars=Nombre total d’estrelles
+matches.lineup.totalStars=Nombre total d’estrelles
 
 #matchdetail
 match.ratings.midfield=Mig
