--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -270,7 +270,7 @@ module.LeagueNewsFilter.desc=Filtry pro zobrazování jednotlivých ligových ud
 module.LeagueNewsFilter.all.desc=Zobrazovat všechny novinky
 module.LeagueNewsFilter.friendlies.desc=Zobrazovat jen informace o mezinárodních přátelských zápasech a změnách trenérů
 module.LeagueNewsFilter.transfers.desc=Zobrazovat jen informace o přestupech
-module.LeagueNewsFilter.lineupChanges.desc=Zobrazovat jen informace o změnách sestav
+module.LeagueNewsFilter.lineup_changes.desc=Zobrazovat jen informace o změnách sestav
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Na stránce regionu přesouvá manažery, kteří jsou připojeni, nahoru. Upozornění\: Pokud počet připojených manažerů přesáhne hodnotu 100, systém může být velice pomalý.
 module.TeamPopupLinks.TeamLinks.desc=Zapnout plovoucí nabídku u odkazů na tým
@@ -643,13 +643,13 @@ match.role.captain.abbr=Kap.
 match.player.unknown=Neznámý hráč
 
 # SkillTable
-Skill_table=Tabulka dovedností
-Switch_view=Změnit vzhled
-AddHomegrown=Přidat odchovance
-showTimeInClub=Zobrazit dobu v klubu
-Switch_view.title=Změnit rozložení tabulky.
-skillTable.addHomegrown=Přidat všechny odchovance
-skillTable.showTimeInClub=Zobrazit dobu, po kterou je hráč součástí hlavního týmu
+SkillTable.header=Tabulka dovedností
+SkillTable.switchView=Změnit vzhled
+SkillTable.addHomegrown=Přidat odchovance
+SkillTable.showTimeInClub=Zobrazit dobu v klubu
+SkillTable.switchView.title=Změnit rozložení tabulky.
+SkillTable.addHomegrown.title=Přidat všechny odchovance
+SkillTable.showTimeInClub.title=Zobrazit dobu, po kterou je hráč součástí hlavního týmu
 skilltable.youthplayer=odchovanec
 skilltable.rebought_youthplayer=znovukoupený odchovanec
 PlayerNumber=Číslo dresu
@@ -779,7 +779,7 @@ notify.newMail=Máš %s nových zpráv.
 #following string uses pluralForms
 notify.newForumMessage=Na konferenci je %s tobě určených příspěvků.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -789,40 +789,40 @@ copy.ht-ml=Kopírovat v HT-ML
 copy.table=Kopírovat tabulku v HT-ML
 
 #copy
-copy.copyplayerad=Kopírovat vlastnosti hráče do schránky
-copy.copied=Informace o hráči byly vloženy do schránky.
+copy.playerad=Kopírovat vlastnosti hráče do schránky
+copy.playerad.copied=Informace o hráči byly vloženy do schránky.
 copy.matchid=Klikněte pro zkopírování ID zápasu do schránky
 
-copy.PostID=Kopírovat ID příspěvku do schránky
-CopyPosting=Kopírovat příspěvek ve stylu %s
-CopyPosting.abbr=Kopírovat v %s stylu
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=Wiki
-CopyPosting.style.raw=textovém
-CopyPosting.style.last=předchozím
+copy.postid=Kopírovat ID příspěvku do schránky
+copy.posting.title=Kopírovat příspěvek ve stylu %s
+copy.posting=Kopírovat v %s stylu
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=Wiki
+copy.posting.style.raw=textovém
+copy.posting.style.last=předchozím
 
-CopyRatings.both=Zkopírovat hodnocení (v HT-ML)
-CopyRatings.home=Zkopírovat hodnocení domácího týmu (v HT-ML)
-CopyRatings.away=Zkopírovat hodnocení hostujícího týmu (v HT-ML)
-CopyRatings.copied=Zápasové hodnocení bylo vloženo do schránky.
+copy.ratings.both=Zkopírovat hodnocení (v HT-ML)
+copy.ratings.home=Zkopírovat hodnocení domácího týmu (v HT-ML)
+copy.ratings.away=Zkopírovat hodnocení hostujícího týmu (v HT-ML)
+copy.ratings.copied=Zápasové hodnocení bylo vloženo do schránky.
 
-CopyYouth.trainingReport=Kopírovat hlášení o tréninku
-CopyYouth.trainingReport.copied=Hlášení o tréninku bylo zkopírováno.
-CopyYouth.scoutComment=Kopírovat skautův komentář
-CopyYouth.scoutComment.copied=Skautův komentář byl zkopírován.
-CopyYouth.playerSource=Kopírovat zdrojový kód hráče
-CopyYouth.playerSource.copied=Zdrojový kód hráče byl zkopírován.
-CopyYouth.fixturesSource=Kopírovat zdrojový kód seznamu zápasů
-CopyYouth.fixturesSource.copied=Zdrojový kód seznamu zápasů byl zkopírován
-CopyYouth.goto=Přejít na %s
+copy.trainingReport=Kopírovat hlášení o tréninku
+copy.trainingReport.copied=Hlášení o tréninku bylo zkopírováno.
+copy.scoutComment=Kopírovat skautův komentář
+copy.scoutComment.copied=Skautův komentář byl zkopírován.
+copy.playerSource=Kopírovat zdrojový kód hráče
+copy.playerSource.copied=Zdrojový kód hráče byl zkopírován.
+copy.fixturesSource=Kopírovat zdrojový kód seznamu zápasů
+copy.fixturesSource.copied=Zdrojový kód seznamu zápasů byl zkopírován
+button.goto=Přejít na %s
 
-copy.copy.skilltable=Kopírovat tabulku dovedností do schránky (v HT-ML)
-copy.copied.skilltable=Konferenční kód tabulky dovedností byl zkopírován do schránky.
-copy.copied.matchid=ID zápasu bylo zkopírováno do schránky.
-copy.copied.postid=Odkaz na příspěvek [post\=%s]  byl zkopírován do schránky.
-copy.copied.posting=Příspěvek %s byl zkopírován do schránky.
-copy.copySelected=Kopírovat výběr pomocí Ctrl + C.
-copy.operaPaste=Vložit pomocí Shift + levý klik.
+copy.skilltable.title=Kopírovat tabulku dovedností do schránky (v HT-ML)
+copy.skilltable.copied=Konferenční kód tabulky dovedností byl zkopírován do schránky.
+copy.matchid.copied=ID zápasu bylo zkopírováno do schránky.
+copy.postid.copied=Odkaz na příspěvek [post\=%s]  byl zkopírován do schránky.
+copy.posting.copied=Příspěvek %s byl zkopírován do schránky.
+specialCopy.hint=Kopírovat výběr pomocí Ctrl + C.
+specialPaste.hint=Vložit pomocí Shift + levý klik.
 
 #matches
 matches.income=Příjem\:
@@ -834,7 +834,7 @@ matches.defense=obrana
 matches.attack=útok
 matches.indfreekick=Nepřímé kopy
 matches.wronglang=FoxTrick\: Statistiky nemohou být zobrazeny, neboť váš jazyk není registrován, případně je v nastavení zvolen špatný jazyk. Ujistěte se, že jazyk nastavený ve Foxtricku je stejný, jako váš jazyk na Hattricku.
-total_stars=Celkem hvězdiček
+matches.lineup.totalStars=Celkem hvězdiček
 
 #matchdetail
 match.ratings.midfield=Záloha
