--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -174,7 +174,7 @@ module.CopyYouth.ScoutComment.desc=σχολιο ανιχνευτη
 module.CopyYouth.PlayerSource.desc=Πηγαίος κώδικα παίκτη
 module.SeasonStats.desc=Εμφάνιση κάποιων στατιστικών στις σελίδες "Αρχείου Αγώνων"
 module.LeagueNewsFilter.transfers.desc=Εμφάνιση μόνο μεταγραφών
-module.LeagueNewsFilter.lineupChanges.desc=Εμφάνιση μόνο αλλαγών στη σύνθεση
+module.LeagueNewsFilter.lineup_changes.desc=Εμφάνιση μόνο αλλαγών στη σύνθεση
 #MoveManagerOnline
 module.TeamPopupLinks.TeamLinks.desc=Προσθέτει ΑναδυόμενουςΣυνδέσμους σε συνδέσμους ομάδας
 module.TeamPopupLinks.UserLinks.desc=Προσθέτει ΑναδυόμενουςΣυνδέσμους σε συνδέσμους χρήστη
@@ -514,11 +514,11 @@ match.role.captain.abbr=Αρχ
 match.player.unknown=Άγνωστος παίκτης
 
 # SkillTable
-Skill_table=Πίνακας ικανοτήτων
-Switch_view=Αλλαγή προβολής
-showTimeInClub=Εμφάνιση χρόνου στην ομάδα
-Switch_view.title=Εναλλαγή της προβολής του πίνακα.
-skillTable.showTimeInClub=Εμφανίζει το χρόνο από τη στιγμή που ο παίκτης εντάχθηκε στη μεγάλη ομάδα
+SkillTable.header=Πίνακας ικανοτήτων
+SkillTable.switchView=Αλλαγή προβολής
+SkillTable.showTimeInClub=Εμφάνιση χρόνου στην ομάδα
+SkillTable.switchView.title=Εναλλαγή της προβολής του πίνακα.
+SkillTable.showTimeInClub.title=Εμφανίζει το χρόνο από τη στιγμή που ο παίκτης εντάχθηκε στη μεγάλη ομάδα
 skilltable.youthplayer=Παίκτης ακαδημίας
 PlayerNumber=Αριθμός Παίκτη
 PlayerNumber.abbr=\#
@@ -645,7 +645,7 @@ notify.newMail=Έχετε λάβει %s νέο μήνυμα.;Έχετε λάβε
 #following string uses pluralForms
 notify.newForumMessage=Υπάρχει %s νέα απάντηση στο φόρουμ για σας.;Υπάρχουν %s νέες απαντήσεις στα φόρουμ για σας.
 
-matchView.htLive=HT Live\!
+MyMonitor.htLive=HT Live\!
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -655,40 +655,40 @@ copy.ht-ml=Αντιγραφή σε HT-ML
 copy.table=Αντιγραφή πίνακα σε HT-ML
 
 #copy
-copy.copyplayerad=Αντιγραφή παίκτη στο πρόχειρο
-copy.copied=Ο παίκτης προστέθηκε στο πρόχειρο
+copy.playerad=Αντιγραφή παίκτη στο πρόχειρο
+copy.playerad.copied=Ο παίκτης προστέθηκε στο πρόχειρο
 copy.matchid=Κάντε κλικ για να αντιγράψετε matchID στο Πρόχειρο
 
-copy.PostID=Αντγραφή στο πρόχειρο
-CopyPosting=Αντιγραφή καταχώρησης σε %s στυλ
-CopyPosting.abbr=Αντιγραφή σε %s στυλ
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=ακατέργαστο
-CopyPosting.style.last=τελευταίο
+copy.postid=Αντγραφή στο πρόχειρο
+copy.posting.title=Αντιγραφή καταχώρησης σε %s στυλ
+copy.posting=Αντιγραφή σε %s στυλ
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=ακατέργαστο
+copy.posting.style.last=τελευταίο
 
-CopyRatings.both=Αντιγράψτε βαθμολογια (σε HT-ML)
-CopyRatings.home=Αξιολογήσεις εντος εδρας Αντιγραφή (σε HT-Λ)
-CopyRatings.away=Αντιγράψτε βαθμολογία εκτος εδρας (σε HT-Λ)
-CopyRatings.copied=Οι βαθμολογίες έχουν αντιγραφεί στο πρόχειρο.
+copy.ratings.both=Αντιγράψτε βαθμολογια (σε HT-ML)
+copy.ratings.home=Αξιολογήσεις εντος εδρας Αντιγραφή (σε HT-Λ)
+copy.ratings.away=Αντιγράψτε βαθμολογία εκτος εδρας (σε HT-Λ)
+copy.ratings.copied=Οι βαθμολογίες έχουν αντιγραφεί στο πρόχειρο.
 
-CopyYouth.trainingReport=Αντιγραφή αναφορας προπονησης
-CopyYouth.trainingReport.copied=αναφορα προπονησης έχει αντιγραφεί.
-CopyYouth.scoutComment=Αντιγραφή σχολίου ανιχνευτή
-CopyYouth.scoutComment.copied=σχόλιο ανιχνευτη έχει αντιγραφεί.
-CopyYouth.playerSource=Αντιγραφή παικτη
-CopyYouth.playerSource.copied=Παίκτης προέλευσης έχει αντιγραφεί.
-CopyYouth.fixturesSource=Αντιγραφή προγράμματος αγώνων
-CopyYouth.fixturesSource.copied=Το πρόγραμμα αγώνων έχει αντιγραφεί.
-CopyYouth.goto=Μεταβείτε στο %s
+copy.trainingReport=Αντιγραφή αναφορας προπονησης
+copy.trainingReport.copied=αναφορα προπονησης έχει αντιγραφεί.
+copy.scoutComment=Αντιγραφή σχολίου ανιχνευτή
+copy.scoutComment.copied=σχόλιο ανιχνευτη έχει αντιγραφεί.
+copy.playerSource=Αντιγραφή παικτη
+copy.playerSource.copied=Παίκτης προέλευσης έχει αντιγραφεί.
+copy.fixturesSource=Αντιγραφή προγράμματος αγώνων
+copy.fixturesSource.copied=Το πρόγραμμα αγώνων έχει αντιγραφεί.
+button.goto=Μεταβείτε στο %s
 
-copy.copy.skilltable=Αντιγραφή πίνακα ικανοτητων στο πρόχειρο (σε HT-Λ)
-copy.copied.skilltable=Ο πίνακας ικανοτήτων έχει αντιγραφεί στο Πρόχειρο.
-copy.copied.matchid=η ταυτοτητα του παιχνιδιου εχει αντιγραφει στο προχειρο
-copy.copied.postid=Δημοσίευση ID [post \= % s] έχει αντιγραφεί στο Πρόχειρο.
-copy.copied.posting=Καταχώρηση %s έχει αντιγραφεί στο Πρόχειρο.
-copy.copySelected=Αντιγραφή επιλογής με το συνδυασμό πλήκτρων Ctrl + c.
-copy.operaPaste=Επικόλληση με Shift + αριστερό κλικ.
+copy.skilltable.title=Αντιγραφή πίνακα ικανοτητων στο πρόχειρο (σε HT-Λ)
+copy.skilltable.copied=Ο πίνακας ικανοτήτων έχει αντιγραφεί στο Πρόχειρο.
+copy.matchid.copied=η ταυτοτητα του παιχνιδιου εχει αντιγραφει στο προχειρο
+copy.postid.copied=Δημοσίευση ID [post \= % s] έχει αντιγραφεί στο Πρόχειρο.
+copy.posting.copied=Καταχώρηση %s έχει αντιγραφεί στο Πρόχειρο.
+specialCopy.hint=Αντιγραφή επιλογής με το συνδυασμό πλήκτρων Ctrl + c.
+specialPaste.hint=Επικόλληση με Shift + αριστερό κλικ.
 
 #matches
 matches.income=Εσοδα\:
@@ -700,7 +700,7 @@ matches.defense=αμ
 matches.attack=επ
 matches.indfreekick=Εμμεσο φάουλ
 matches.wronglang=Foxtrick\: Τα στατιστικά δεν μπορούν να εμφανιστούν επειδή η γλώσσα σας δεν υπάρχει ή επειδή έχετε λάθος γλώσσα στις προτιμήσεις. Παρακαλώ βεβαιωθείτε ότι η γλώσσα του Foxtrick είναι η ίδια με του Hattrick.
-total_stars=Μέτρηση Συνόλου Αστεριών
+matches.lineup.totalStars=Μέτρηση Συνόλου Αστεριών
 
 #matchdetail
 match.ratings.midfield=Κέντρο
