--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -274,7 +274,7 @@ module.LeagueNewsFilter.desc=Filters for showing a certain type of league news.
 module.LeagueNewsFilter.all.desc=Show all news
 module.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
 module.LeagueNewsFilter.transfers.desc=Show only transfers
-module.LeagueNewsFilter.lineupChanges.desc=Show only lineup changes
+module.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Moves managers online up on region page. Caution\! This gets very slow if the list of online players get over 100.
 module.TeamPopupLinks.TeamLinks.desc=Add popups to team links
@@ -546,10 +546,10 @@ matchOrder.tournamentMatch=Tournament match
 
 
 # SkillTable
-AddHomegrown=Add home grown players
-Switch_view.title=Switch the view of the table.
-skillTable.addHomegrown=Adds all homegrown players from the current senior squad
-skillTable.showTimeInClub=Shows time since player joined the club's senior squad
+SkillTable.addHomegrown=Add home grown players
+SkillTable.switchView.title=Switch the view of the table.
+SkillTable.addHomegrown.title=Adds all homegrown players from the current senior squad
+SkillTable.showTimeInClub.title=Shows time since player joined the club's senior squad
 skilltable.rebought_youthplayer=rebought youth player
 CanBePromotedIn=Could be promoted in
 Loyalty=Loyalty
@@ -590,27 +590,27 @@ notify.newMail=You have received %s new mail.;You have received %s new mails.
 #following string uses pluralForms
 notify.newForumMessage=There is %s new forum reply to you.;There are %s new forum replies to you.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
 
 #copy
-copy.copyplayerad=Copy player ad
-copy.copied=The player ad has been copied to the clipboard.
+copy.playerad=Copy player ad
+copy.playerad.copied=The player ad has been copied to the clipboard.
 copy.matchid=Click to copy matchID to clipboard
 
-copy.PostID=Copy PostID to clipboard
+copy.postid=Copy PostID to clipboard
 
 
 
-copy.copy.skilltable=Copy skill table to clipboard (in HT-ML)
-copy.copied.skilltable=The skill table has been copied to the clipboard.
-copy.copied.matchid=The match ID has been copied to the clipboard.
-copy.copied.postid=Post ID [post\=%s] has been copied to the clipboard.
-copy.copied.posting=Posting %s has been copied to the clipboard.
-copy.copySelected=Copy selection with Ctrl + C.
-copy.operaPaste=Paste with Shift + Left Click.
+copy.skilltable.title=Copy skill table to clipboard (in HT-ML)
+copy.skilltable.copied=The skill table has been copied to the clipboard.
+copy.matchid.copied=The match ID has been copied to the clipboard.
+copy.postid.copied=Post ID [post\=%s] has been copied to the clipboard.
+copy.posting.copied=Posting %s has been copied to the clipboard.
+specialCopy.hint=Copy selection with Ctrl + C.
+specialPaste.hint=Paste with Shift + Left Click.
 
 #matches
 matches.income=Income\:
