--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -252,7 +252,7 @@ module.LeagueNewsFilter.desc=Filtros para mostrar algunos tipos de noticias de l
 module.LeagueNewsFilter.all.desc=Todas las noticias
 module.LeagueNewsFilter.friendlies.desc=Amistosos internacionales y cambios de entrenador
 module.LeagueNewsFilter.transfers.desc=Sólo transferencias
-module.LeagueNewsFilter.lineupChanges.desc=Sólo modificaciones en la alineación
+module.LeagueNewsFilter.lineup_changes.desc=Sólo modificaciones en la alineación
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Mover los managers online al principio en la página de las regiones. ¡Precaución\! Muy lento para más de 100 managers\!
 module.TeamPopupLinks.TeamLinks.desc=Añade popups a los links del equipo
@@ -593,13 +593,13 @@ match.role.captain.abbr=Capi
 match.player.unknown=Jugador desconocido
 
 # SkillTable
-Skill_table=Tabla de habilidades
-Switch_view=Cambiar vista
-AddHomegrown=Añadir jugadores promocionados por el club
-showTimeInClub=Mostrar tiempo en el club
-Switch_view.title=Cambia la vista de la tabla.
-skillTable.addHomegrown=Añadir todos los jugadores promocionados por el equipo desde el actual
-skillTable.showTimeInClub=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
+SkillTable.header=Tabla de habilidades
+SkillTable.switchView=Cambiar vista
+SkillTable.addHomegrown=Añadir jugadores promocionados por el club
+SkillTable.showTimeInClub=Mostrar tiempo en el club
+SkillTable.switchView.title=Cambia la vista de la tabla.
+SkillTable.addHomegrown.title=Añadir todos los jugadores promocionados por el equipo desde el actual
+SkillTable.showTimeInClub.title=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
 skilltable.youthplayer=juvenil canterano
 PlayerNumber=Dorsal del jugador
 PlayerNumber.abbr=\#
@@ -723,7 +723,7 @@ notify.newMail=Has recibido %s nuevo(s) HTmail(s).
 #following string uses pluralForms
 notify.newForumMessage=Has recibido %s nuevos mensajes del foro.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -733,40 +733,40 @@ copy.ht-ml=Copia en HT-ML
 copy.table=Copia la tabla en HT-ML
 
 #copy
-copy.copyplayerad=Copiar información de jugador a portapapeles
-copy.copied=La información del jugador ha sido copiada al portapapeles.
+copy.playerad=Copiar información de jugador a portapapeles
+copy.playerad.copied=La información del jugador ha sido copiada al portapapeles.
 copy.matchid=Pulsa para copiar el ID del partido al portapapeles
 
-copy.PostID=Copiar ID del mensaje al portapapeles
-CopyPosting=Copiar el mensaje en estilo %s
-CopyPosting.abbr=Copia en estilo %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=plano
-CopyPosting.style.last=último
+copy.postid=Copiar ID del mensaje al portapapeles
+copy.posting.title=Copiar el mensaje en estilo %s
+copy.posting=Copia en estilo %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=plano
+copy.posting.style.last=último
 
-CopyRatings.both=Copiar calificaciones (en HT-ML)
-CopyRatings.home=Copiar calificaciones equipo local (en HT-ML)
-CopyRatings.away=Copiar calificaciones equipo visitante (en HT-ML)
-CopyRatings.copied=Se han copiado las calificaciones al portapapeles
+copy.ratings.both=Copiar calificaciones (en HT-ML)
+copy.ratings.home=Copiar calificaciones equipo local (en HT-ML)
+copy.ratings.away=Copiar calificaciones equipo visitante (en HT-ML)
+copy.ratings.copied=Se han copiado las calificaciones al portapapeles
 
-CopyYouth.trainingReport=Copiar informe de entrenamiento
-CopyYouth.trainingReport.copied=El entrenamiento ha sido copiado
-CopyYouth.scoutComment=Copiar comentario del scout
-CopyYouth.scoutComment.copied=El comentario del scout ha sido copiado
-CopyYouth.playerSource=Copiar fuente HTML del jugador (para hattrick-youthclub.org)
-CopyYouth.playerSource.copied=El código fuente del jugador ha sido copiado.
-CopyYouth.fixturesSource=Copiar código HTML de los resultados
-CopyYouth.fixturesSource.copied=El código fuente de los resultados ha sido copiado.
-CopyYouth.goto=Ir a %s
+copy.trainingReport=Copiar informe de entrenamiento
+copy.trainingReport.copied=El entrenamiento ha sido copiado
+copy.scoutComment=Copiar comentario del scout
+copy.scoutComment.copied=El comentario del scout ha sido copiado
+copy.playerSource=Copiar fuente HTML del jugador (para hattrick-youthclub.org)
+copy.playerSource.copied=El código fuente del jugador ha sido copiado.
+copy.fixturesSource=Copiar código HTML de los resultados
+copy.fixturesSource.copied=El código fuente de los resultados ha sido copiado.
+button.goto=Ir a %s
 
-copy.copy.skilltable=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
-copy.copied.skilltable=la tabla de habilidades se ha copiado al portapapeles
-copy.copied.matchid=El id del partido ha sido copiado al portapapeles.
-copy.copied.postid=El id del post ha sido copiado al portapapeles.
-copy.copied.posting=El mensaje ha sido copiado al portapapeles.
-copy.copySelected=Copiar selección con Ctrl + C.
-copy.operaPaste=Pegar con Mayús + clic izquierdo.
+copy.skilltable.title=Copiar tabla de habilidades al portapapeles (estilo Hattrick Foro)
+copy.skilltable.copied=la tabla de habilidades se ha copiado al portapapeles
+copy.matchid.copied=El id del partido ha sido copiado al portapapeles.
+copy.postid.copied=El id del post ha sido copiado al portapapeles.
+copy.posting.copied=El mensaje ha sido copiado al portapapeles.
+specialCopy.hint=Copiar selección con Ctrl + C.
+specialPaste.hint=Pegar con Mayús + clic izquierdo.
 
 #matches
 matches.income=Ingresos\:
@@ -778,7 +778,7 @@ matches.defense=def
 matches.attack=at
 matches.indfreekick=Tiro indirecto
 matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
-total_stars=Suma total de estrellas
+matches.lineup.totalStars=Suma total de estrellas
 
 #matchdetail
 match.ratings.midfield=Mediocampo
