--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -235,7 +235,7 @@ module.LeagueNewsFilter.desc=On series page highlights teams which changed or se
 module.LeagueNewsFilter.all.desc=همه اخبار را نشان بده
 module.LeagueNewsFilter.friendlies.desc=فقط بازي هاي بين المللي و تغيير مربي را نشان بده
 module.LeagueNewsFilter.transfers.desc=فقط نقل و انتقالات را نشان بده
-module.LeagueNewsFilter.lineupChanges.desc=فقط تغييرات چيدمان را نشان بده
+module.LeagueNewsFilter.lineup_changes.desc=فقط تغييرات چيدمان را نشان بده
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Moves managers online up on region page. Caution\! This gets very slow if the list of online players get over 100.
 module.TeamPopupLinks.TeamLinks.desc=افزودن صفحه باز شو به پيوند تيمها
@@ -539,13 +539,13 @@ match.role.captain.abbr=کاپیتان
 match.player.unknown=بازیکن ناشناس
 
 # SkillTable
-Skill_table=جدول مهارت ها
-Switch_view=عوض کردن نما
-AddHomegrown=افزودن بازیکنانی که از ابتدا در تیم شما پرورش یافته‌اند
-showTimeInClub=نمایش زمان در باشگاه
-Switch_view.title=تغيير دادن ديد براي جدول
-skillTable.addHomegrown=همه بازیکنان وطنی را از اکنون اضافه کن
-skillTable.showTimeInClub=زمانِ بعد از پیوستن به بزرگسالان را نشان بِده
+SkillTable.header=جدول مهارت ها
+SkillTable.switchView=عوض کردن نما
+SkillTable.addHomegrown=افزودن بازیکنانی که از ابتدا در تیم شما پرورش یافته‌اند
+SkillTable.showTimeInClub=نمایش زمان در باشگاه
+SkillTable.switchView.title=تغيير دادن ديد براي جدول
+SkillTable.addHomegrown.title=همه بازیکنان وطنی را از اکنون اضافه کن
+SkillTable.showTimeInClub.title=زمانِ بعد از پیوستن به بزرگسالان را نشان بِده
 skilltable.youthplayer=بازیکن آکادمی جوانان
 skilltable.rebought_youthplayer=بازیکن آکادمی جوانان که دوباره خریداری شده
 PlayerNumber=شماره بازيکن
@@ -666,7 +666,7 @@ notify.newMail=%s پيام خصوصي جديد داريد.
 #following string uses pluralForms
 notify.newForumMessage=%s پيام جديد در انجمن داريد.
 
-matchView.htLive=پخش زنده
+MyMonitor.htLive=پخش زنده
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -676,37 +676,37 @@ copy.ht-ml=کپي در HT-ML
 copy.table=کپي نمودن جدول در HT-ML
 
 #copy
-copy.copyplayerad=کپي نمودن اطلاعات بازيکن (براي معرفي به کادر استعداد يابي)
-copy.copied=شماره بازيکن ذخيره شد
+copy.playerad=کپي نمودن اطلاعات بازيکن (براي معرفي به کادر استعداد يابي)
+copy.playerad.copied=شماره بازيکن ذخيره شد
 copy.matchid=براي کپي نمودن شماره شناسايي اين بازي کليک کنيد
 
-copy.PostID=ذخيره شماره شناسايي پست در حافظه
-CopyPosting=کپي پست در %s مدل
-CopyPosting.abbr=کپي در %s مدل
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=اخرين
+copy.postid=ذخيره شماره شناسايي پست در حافظه
+copy.posting.title=کپي پست در %s مدل
+copy.posting=کپي در %s مدل
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
+copy.posting.style.last=اخرين
 
-CopyRatings.both=کپي نمودن عملکرد (in HT-ML)
-CopyRatings.home=کپي نمودن عملکرد تيم ميزبان (in HT-ML)
-CopyRatings.away=کپي نمودن عملکرد تيم مهمان(in HT-ML)
-CopyRatings.copied=عملکرد در حافظه ذخيره شد.
+copy.ratings.both=کپي نمودن عملکرد (in HT-ML)
+copy.ratings.home=کپي نمودن عملکرد تيم ميزبان (in HT-ML)
+copy.ratings.away=کپي نمودن عملکرد تيم مهمان(in HT-ML)
+copy.ratings.copied=عملکرد در حافظه ذخيره شد.
 
-CopyYouth.trainingReport=گزارش تمرین را کپی کن
-CopyYouth.trainingReport.copied=گزارش تمرین کپی شد.
-CopyYouth.scoutComment=نظر استعدادیاب را کپی کن
-CopyYouth.scoutComment.copied=نظر استعدادیاب کپی شد.
-CopyYouth.playerSource=سورس صفحه این بازیکن را کپی کن
-CopyYouth.playerSource.copied=سورس صفحه این بازیکن کپی شد.
+copy.trainingReport=گزارش تمرین را کپی کن
+copy.trainingReport.copied=گزارش تمرین کپی شد.
+copy.scoutComment=نظر استعدادیاب را کپی کن
+copy.scoutComment.copied=نظر استعدادیاب کپی شد.
+copy.playerSource=سورس صفحه این بازیکن را کپی کن
+copy.playerSource.copied=سورس صفحه این بازیکن کپی شد.
 
-copy.copy.skilltable=ذخيره کردن جدول مهارت ها (در HT-ML)
-copy.copied.skilltable=جدول مهارتها در حافظه ذخيره شد.
-copy.copied.matchid=شماره شناسايي اين بازي در حافظه ذخيره شد.
-copy.copied.postid=شماره پست [post\=%s] در حافظه ذخيره شد.
-copy.copied.posting=پست %s در حافظه ذخيره شد.
-copy.copySelected=قسمت‌های انتخاب شده را با گرفتن دکمه‌های کنترل و C کپی کن.
-copy.operaPaste=با زدن دکمه شیف و کلیک چپ موس،‌ اطلاعات را بچسبان.
+copy.skilltable.title=ذخيره کردن جدول مهارت ها (در HT-ML)
+copy.skilltable.copied=جدول مهارتها در حافظه ذخيره شد.
+copy.matchid.copied=شماره شناسايي اين بازي در حافظه ذخيره شد.
+copy.postid.copied=شماره پست [post\=%s] در حافظه ذخيره شد.
+copy.posting.copied=پست %s در حافظه ذخيره شد.
+specialCopy.hint=قسمت‌های انتخاب شده را با گرفتن دکمه‌های کنترل و C کپی کن.
+specialPaste.hint=با زدن دکمه شیف و کلیک چپ موس،‌ اطلاعات را بچسبان.
 
 #matches
 matches.income=درآمد
@@ -718,7 +718,7 @@ matches.defense=دفاع
 matches.attack=حمله
 matches.indfreekick=ضربه ي ايستگاهي
 matches.wronglang=.فاکس تريک \: آمار نشان داده نميشوند زيرا زبان انتخابي شما ثبت نشده است يا شما يک زبان را به اشتباه انتخاب کرديد.لطفا اطمينان پيدا کنيد از تنظيمات انتخاب شده
-total_stars=کل ستاره‌ها
+matches.lineup.totalStars=کل ستاره‌ها
 
 #matchdetail
 match.ratings.midfield=خط هافبک
