--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -272,7 +272,7 @@ module.LeagueNewsFilter.desc=Ajoute un filtre pour sélectionner les information
 module.LeagueNewsFilter.all.desc=Toutes les informations
 module.LeagueNewsFilter.friendlies.desc=Uniquement les informations concernant les matchs internationaux et les changements d'entraîneurs
 module.LeagueNewsFilter.transfers.desc=Uniquement les informations concernant les transferts
-module.LeagueNewsFilter.lineupChanges.desc=Uniquement les informations concernant les changements de composition d'équipes
+module.LeagueNewsFilter.lineup_changes.desc=Uniquement les informations concernant les changements de composition d'équipes
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Déplace vers le haut la liste des membres connectés des pages Région. Attention\! L'affichage sera très lent si le nombre de joueurs en ligne est supérieur à 100.
 module.TeamPopupLinks.TeamLinks.desc=Activer pour les liens des équipes
@@ -651,13 +651,13 @@ match.role.captain.abbr=Cap.
 match.player.unknown=Joueur inconnu
 
 # SkillTable
-Skill_table=Tableau des compétences
-Switch_view=Changer de vue
-AddHomegrown=Ajouter les joueurs locaux
-showTimeInClub=Afficher l'heure du l'équipe
-Switch_view.title=Trier l'affichage du tableau.
-skillTable.addHomegrown=Ajoute tous les joueurs issus du club de l'équipe senior en place
-skillTable.showTimeInClub=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
+SkillTable.header=Tableau des compétences
+SkillTable.switchView=Changer de vue
+SkillTable.addHomegrown=Ajouter les joueurs locaux
+SkillTable.showTimeInClub=Afficher l'heure du l'équipe
+SkillTable.switchView.title=Trier l'affichage du tableau.
+SkillTable.addHomegrown.title=Ajoute tous les joueurs issus du club de l'équipe senior en place
+SkillTable.showTimeInClub.title=Montre le temps restant d'ici à ce que le joueur puisse rejoindre l'équipe senior
 skilltable.youthplayer=Junior
 skilltable.rebought_youthplayer=Jeune joueur racheté
 PlayerNumber=Numéro de maillot
@@ -787,7 +787,7 @@ notify.newMail=Vous avez reçu %s nouveau mail. ;Vous avez reçu %s nouveaux mai
 #following string uses pluralForms
 notify.newForumMessage=Il y a %s nouvelle réponse sur le forum pour vous. ;Il y a %s nouvelles réponses sur le forum pour vous.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -797,40 +797,40 @@ copy.ht-ml=Copier en HT-ML
 copy.table=Copiez le tableau en HT-ML
 
 #copy
-copy.copyplayerad=Copier les details du joueur dans le presse-papiers
-copy.copied=Les détails du joueur ont été copiés dans le presse-papiers.
+copy.playerad=Copier les details du joueur dans le presse-papiers
+copy.playerad.copied=Les détails du joueur ont été copiés dans le presse-papiers.
 copy.matchid=Cliquez pour copier l'identifiant du match dans le presse-papiers.
 
-copy.PostID=Copie l'identifiant du message dans le presse-papiers
-CopyPosting=Copier coller dans le style %s
-CopyPosting.abbr=Copier dans le style %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=dernier
+copy.postid=Copie l'identifiant du message dans le presse-papiers
+copy.posting.title=Copier coller dans le style %s
+copy.posting=Copier dans le style %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
+copy.posting.style.last=dernier
 
-CopyRatings.both=Copier les notes (en HT-ML)
-CopyRatings.home=Copier les performances détaillés de l'équipe jouant à domicile dans le presse-papiers (style HT-BBCode)
-CopyRatings.away=Copier les performances détaillés de l'équipe jouant à l'extérieur dans le presse-papiers (style HT-BBCode)
-CopyRatings.copied=Les performances détaillés ont été copiées dans le presse-papiers.
+copy.ratings.both=Copier les notes (en HT-ML)
+copy.ratings.home=Copier les performances détaillés de l'équipe jouant à domicile dans le presse-papiers (style HT-BBCode)
+copy.ratings.away=Copier les performances détaillés de l'équipe jouant à l'extérieur dans le presse-papiers (style HT-BBCode)
+copy.ratings.copied=Les performances détaillés ont été copiées dans le presse-papiers.
 
-CopyYouth.trainingReport=Copier le rapport d'entrainement
-CopyYouth.trainingReport.copied=Le rapport d'entrainement a été copié
-CopyYouth.scoutComment=Copiez le commentaire du recruteur
-CopyYouth.scoutComment.copied=Le commentaire de recruteur a été copié
-CopyYouth.playerSource=Copier le code source du joueur
-CopyYouth.playerSource.copied=Le code source du joueur a été copié
-CopyYouth.fixturesSource=Copier le code source du calendrier des matchs
-CopyYouth.fixturesSource.copied=Le code source du calendrier a été copié.
-CopyYouth.goto=Aller à %s
+copy.trainingReport=Copier le rapport d'entrainement
+copy.trainingReport.copied=Le rapport d'entrainement a été copié
+copy.scoutComment=Copiez le commentaire du recruteur
+copy.scoutComment.copied=Le commentaire de recruteur a été copié
+copy.playerSource=Copier le code source du joueur
+copy.playerSource.copied=Le code source du joueur a été copié
+copy.fixturesSource=Copier le code source du calendrier des matchs
+copy.fixturesSource.copied=Le code source du calendrier a été copié.
+button.goto=Aller à %s
 
-copy.copy.skilltable=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
-copy.copied.skilltable=Le tableau de compétences a été copié dans le presse-papiers.
-copy.copied.matchid=L'identifiant du match a été copié dans le presse-papiers.
-copy.copied.postid=L'identifiant du sujet a été copié dans le presse-papiers.
-copy.copied.posting=Le message a été copié dans le presse-papiers.
-copy.copySelected=Copier la sélection avec Ctrl + c
-copy.operaPaste=Coller avec Shift + clic gauche.
+copy.skilltable.title=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
+copy.skilltable.copied=Le tableau de compétences a été copié dans le presse-papiers.
+copy.matchid.copied=L'identifiant du match a été copié dans le presse-papiers.
+copy.postid.copied=L'identifiant du sujet a été copié dans le presse-papiers.
+copy.posting.copied=Le message a été copié dans le presse-papiers.
+specialCopy.hint=Copier la sélection avec Ctrl + c
+specialPaste.hint=Coller avec Shift + clic gauche.
 
 #matches
 matches.income=Recette \:
@@ -842,7 +842,7 @@ matches.defense=déf
 matches.attack=att
 matches.indfreekick=Coup franc indirect
 matches.wronglang=FoxTrick\: Les statistiques ne peuvent pas être affichés parce que votre langue n'est pas enregistrée ou parce que vous avez défini la mauvaise langue dans les préférences
-total_stars=Nombre total d'étoiles
+matches.lineup.totalStars=Nombre total d'étoiles
 
 #matchdetail
 match.ratings.midfield=Milieu
