--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -231,7 +231,7 @@ module.LeagueNewsFilter.desc=Adds filter select box for league news. Set your de
 module.LeagueNewsFilter.all.desc=Show all news
 module.LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
 module.LeagueNewsFilter.transfers.desc=Show only transfers
-module.LeagueNewsFilter.lineupChanges.desc=Show only lineup changes
+module.LeagueNewsFilter.lineup_changes.desc=Show only lineup changes
 
 
 #MoveManagerOnline
@@ -419,7 +419,7 @@ ForumPreview.preview=Preview
 ForumPreview.send=Send
 
 #Forums
-copy.PostID=Copy PostID to clipboard
+copy.postid=Copy PostID to clipboard
 
 
 
@@ -592,26 +592,26 @@ sidebarBox.actions=Actions
 
 ManagerButtons.writeInGuestbook=Write in Guestbook
 
-copy.copyplayerad=Copy player ad to clipboard
-copy.copied=The player ad has been copied to the clipboard.
+copy.playerad=Copy player ad to clipboard
+copy.playerad.copied=The player ad has been copied to the clipboard.
 
 
 
 
-CopyRatings.home=Copy home team ratings to the clipboard (HT-BBCode style)
-CopyRatings.away=Copy away team ratings to the clipboard (HT-BBCode style)
-CopyRatings.copied=The Ratings have been copied to the clipboard.
+copy.ratings.home=Copy home team ratings to the clipboard (HT-BBCode style)
+copy.ratings.away=Copy away team ratings to the clipboard (HT-BBCode style)
+copy.ratings.copied=The Ratings have been copied to the clipboard.
 copy.youthclub=hattrick-youthclub.org
 
-copy.copy.skilltable=Copy skill table to clipboard (HT Forum style)
+copy.skilltable.title=Copy skill table to clipboard (HT Forum style)
 
 
 
 
 
-copy.copied.matchid=The match ID has been copied to the clipboard.
-copy.copied.postid=The post ID has been copied to the clipboard.
-copy.copied.posting=The posting has been copied to the clipboard.
+copy.matchid.copied=The match ID has been copied to the clipboard.
+copy.postid.copied=The post ID has been copied to the clipboard.
+copy.posting.copied=The posting has been copied to the clipboard.
 
 #matches
 matches.attackdefensebars=Attack vs Defense bars
@@ -667,7 +667,7 @@ more=more...
 less=less...
 
 # AdvancedStarsCounter
-total_stars=Total stars count
+matches.lineup.totalStars=Total stars count
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Show map
