--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -250,12 +250,12 @@ links.custom.helptext2=Do kinst dyn koppelings ek eksportearje en diele. Om dit 
 # This would look like: Copy player ID: 123456789
 
 #copy
-copy.copyplayerad=Kopiearje spileradvertinsje nei klemboerd
-copy.copied=De spileradvertinsje is kopiearre nei it klemboerd.
+copy.playerad=Kopiearje spileradvertinsje nei klemboerd
+copy.playerad.copied=De spileradvertinsje is kopiearre nei it klemboerd.
 
-copy.PostID=Kopiearje nei klemboerd
+copy.postid=Kopiearje nei klemboerd
 
-CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
+copy.ratings.copied=De wurdearrings binne kopiearre nei it klemboerd.
 
 
 
@@ -269,7 +269,7 @@ matches.defense=ferd
 matches.attack=oanf
 matches.indfreekick=Ynd. frije trapen
 matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net registrearre is, of omdat de ferkearde taal ynsteld is by foarkeuren. Sjoch nei of dyn Foxtricktaal gelyk is oan dyn Hattricktaal.
-total_stars=Totaal oantal stjerren
+matches.lineup.totalStars=Totaal oantal stjerren
 
 #matchdetail
 match.ratings.midfield=Middenfjild
