--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -358,9 +358,9 @@ match.role.captain=Capitán
 
 
 # SkillTable
-Switch_view=Trocar vista
-AddHomegrown=Engadir a fidelidade dos xogadores
-showTimeInClub=Mostrar tempo no club
+SkillTable.switchView=Trocar vista
+SkillTable.addHomegrown=Engadir a fidelidade dos xogadores
+SkillTable.showTimeInClub=Mostrar tempo no club
 TSI.abbr=TSI
 Agreeability=Carácter
 Agreeability.abbr=Ca
@@ -454,18 +454,18 @@ copy.ht-ml=Copiar en HT-ML
 copy.table=Copiar a tabla en HT-ML
 
 #copy
-copy.copyplayerad=Copiar un anuncio do xogador ao portapapeis
-copy.copied=Copiaches o anuncio deste xogador ao portapapeis
+copy.playerad=Copiar un anuncio do xogador ao portapapeis
+copy.playerad.copied=Copiaches o anuncio deste xogador ao portapapeis
 copy.matchid=Fai click para copiar o matchID ao portapapeis
 
-copy.PostID=Copiar ao portapapeis
+copy.postid=Copiar ao portapapeis
 
-CopyRatings.both=Copiar calificacións (en HT-ML)
-CopyRatings.home=Copiar calificacións locais (en HT-ML)
-CopyRatings.away=Copiar calificacións visitante (en HT-ML)
-CopyRatings.copied=As calificacións copiáronse ó portapapeis.
+copy.ratings.both=Copiar calificacións (en HT-ML)
+copy.ratings.home=Copiar calificacións locais (en HT-ML)
+copy.ratings.away=Copiar calificacións visitante (en HT-ML)
+copy.ratings.copied=As calificacións copiáronse ó portapapeis.
 
-CopyYouth.trainingReport=Copiar informe de adestramento
+copy.trainingReport=Copiar informe de adestramento
 
 
 #matches
@@ -478,7 +478,7 @@ matches.defense=def
 matches.attack=ata
 matches.indfreekick=Saques de falta ind.
 matches.wronglang=Foxtrick\: Non se puideron amosar as estatísticas porque a túa lingua aínda non está rexistrada ou porque te equivocaras ao establecer a lingua nas preferncias. Por favor asegúrate de que a lingua que teñas non Foxtrick sexa a mesma que empregas no Hattrick
-total_stars=Número total de estrelas
+matches.lineup.totalStars=Número total de estrelas
 
 #matchdetail
 match.ratings.midfield=Mediocampo
