--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -62,7 +62,7 @@ module.SeasonStats.desc=הצגת סטטיסטיקה מסוימת בדפי ארכ
 module.LeagueNewsFilter.desc=מסנן המציג חדשות ליגה מסוג מסוים
 module.LeagueNewsFilter.all.desc=הצג את כל החדשות
 module.LeagueNewsFilter.transfers.desc=הצג רק העברות
-module.LeagueNewsFilter.lineupChanges.desc=הצג שינויים בהרכב בלבד
+module.LeagueNewsFilter.lineup_changes.desc=הצג שינויים בהרכב בלבד
 #MoveManagerOnline
 module.TeamPopupLinks.Matches.desc=משחקים
 module.TeamPopupLinks.Players.desc=﻿שחקנים
@@ -349,10 +349,10 @@ match.role.captain.abbr=קפטן
 match.player.unknown=שחקן בלתי ידוע
 
 # SkillTable
-Skill_table=טבלת יכולות
-Switch_view=החלף תצוגה
-showTimeInClub=הצג זמן במועדון
-Switch_view.title=שנה תצוגת טבלה
+SkillTable.header=טבלת יכולות
+SkillTable.switchView=החלף תצוגה
+SkillTable.showTimeInClub=הצג זמן במועדון
+SkillTable.switchView.title=שנה תצוגת טבלה
 skilltable.youthplayer=שחקן נוער
 skilltable.rebought_youthplayer=שחקן נוער שנמכר ונקנה מחדש
 PlayerNumber=מספר שחקן
@@ -467,7 +467,7 @@ links.custom.help=עזרה
 #following string uses pluralForms
 #following string uses pluralForms
 
-matchView.htLive=האט לייב
+MyMonitor.htLive=האט לייב
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -477,40 +477,40 @@ copy.ht-ml=העתק ב-HT-ML
 copy.table=העתק את הטבלה ב-HT-ML
 
 #copy
-copy.copyplayerad=העתק נתוני שחקן
-copy.copied=פרטי השחקן הועתקו ללוח.
+copy.playerad=העתק נתוני שחקן
+copy.playerad.copied=פרטי השחקן הועתקו ללוח.
 copy.matchid=לחץ כדי להעתיק מספר משחק ללוח
 
-copy.PostID=העתק מספר ההודעה ללוח
-CopyPosting=העתק הודעה בסגנון %s
-CopyPosting.abbr=העתק בסגנון %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=ויקי
-CopyPosting.style.raw=לא מסודר
-CopyPosting.style.last=האחרון
+copy.postid=העתק מספר ההודעה ללוח
+copy.posting.title=העתק הודעה בסגנון %s
+copy.posting=העתק בסגנון %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=ויקי
+copy.posting.style.raw=לא מסודר
+copy.posting.style.last=האחרון
 
-CopyRatings.both=העתק רייטינג (ב HT-ML)
-CopyRatings.home=העתק רייטינג קבוצת הבית (ב HT-ML)
-CopyRatings.away=העתק רייטינג קבוצת החוץ (ב HT-ML)
-CopyRatings.copied=הרייטניג הועתק ללוח.
+copy.ratings.both=העתק רייטינג (ב HT-ML)
+copy.ratings.home=העתק רייטינג קבוצת הבית (ב HT-ML)
+copy.ratings.away=העתק רייטינג קבוצת החוץ (ב HT-ML)
+copy.ratings.copied=הרייטניג הועתק ללוח.
 
-CopyYouth.trainingReport=העתק דו"ח אימון
-CopyYouth.trainingReport.copied=דו"ח האימון הועתק
-CopyYouth.scoutComment=העתק הערת מגלה כשרונות
-CopyYouth.scoutComment.copied=הערת מגלה הכשרונות הועתקה
-CopyYouth.playerSource=העתק נתוני שחקן בקוד מקור
-CopyYouth.playerSource.copied=קוד מקור של השחקן הועתק
-CopyYouth.fixturesSource=העתק מקור של רשימת המשחקים
-CopyYouth.fixturesSource.copied=מקור רשימת המשחקים הועתק.
-CopyYouth.goto=לך ל-%s
+copy.trainingReport=העתק דו"ח אימון
+copy.trainingReport.copied=דו"ח האימון הועתק
+copy.scoutComment=העתק הערת מגלה כשרונות
+copy.scoutComment.copied=הערת מגלה הכשרונות הועתקה
+copy.playerSource=העתק נתוני שחקן בקוד מקור
+copy.playerSource.copied=קוד מקור של השחקן הועתק
+copy.fixturesSource=העתק מקור של רשימת המשחקים
+copy.fixturesSource.copied=מקור רשימת המשחקים הועתק.
+button.goto=לך ל-%s
 
-copy.copy.skilltable=העתק את טבלת היכולות ללוח (ב-HT-ML)
-copy.copied.skilltable=טבלת היכולות הועתקה ללוח.
-copy.copied.matchid=מספר המשחק הועתק ללוח.
-copy.copied.postid=מספר ההודעה [post\=%s] הועתק ללוח.
-copy.copied.posting=הודעה %s הועתקה אל הלוח.
-copy.copySelected=העתק קטע נבחר באמצעות Ctrl + c.
-copy.operaPaste=הדבק באמצעות מקש Shift + קליק שמאלי.
+copy.skilltable.title=העתק את טבלת היכולות ללוח (ב-HT-ML)
+copy.skilltable.copied=טבלת היכולות הועתקה ללוח.
+copy.matchid.copied=מספר המשחק הועתק ללוח.
+copy.postid.copied=מספר ההודעה [post\=%s] הועתק ללוח.
+copy.posting.copied=הודעה %s הועתקה אל הלוח.
+specialCopy.hint=העתק קטע נבחר באמצעות Ctrl + c.
+specialPaste.hint=הדבק באמצעות מקש Shift + קליק שמאלי.
 
 #matches
 matches.income=הכנסה\:
@@ -521,7 +521,7 @@ matches.center=מרכזית
 matches.defense=הגנה
 matches.attack=התקפה
 matches.indfreekick=בעיטות נייחים בלתי ישירות
-total_stars=סך כוכבים
+matches.lineup.totalStars=סך כוכבים
 
 #matchdetail
 match.ratings.midfield=קישור
