--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -232,7 +232,7 @@ module.LeagueNewsFilter.desc=A csoportoldalon kiemeli a nemrégiben felállást 
 module.LeagueNewsFilter.all.desc=Megjeleníti az összes hírt
 module.LeagueNewsFilter.friendlies.desc=Csak a nemzetközi barátságos mérkőzéseket és az edzőcseréket jeleníti meg
 module.LeagueNewsFilter.transfers.desc=Csak az átigazolásokat jeleníti meg
-module.LeagueNewsFilter.lineupChanges.desc=Csak a felállás módosításait jeleníti meg
+module.LeagueNewsFilter.lineup_changes.desc=Csak a felállás módosításait jeleníti meg
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Felülre helyezi az online menedzserek listáját a Régiók oldalon. Figyelem\! Ha az online játékosok száma eléri a 100-at, a folyamat igencsak lelassul\!
 module.TeamPopupLinks.TeamLinks.desc=Előugró hivatkozásokat ad a csapathivatkozásokhoz
@@ -567,11 +567,11 @@ match.role.captain.abbr=CSK
 match.player.unknown=Ismeretlen játékos
 
 # SkillTable
-Skill_table=Képességtáblázat
-Switch_view=A nézet felcserélése
-showTimeInClub=Mutassa a klubban töltött időt
-Switch_view.title=A táblázat nézetének felcserélése
-skillTable.showTimeInClub=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
+SkillTable.header=Képességtáblázat
+SkillTable.switchView=A nézet felcserélése
+SkillTable.showTimeInClub=Mutassa a klubban töltött időt
+SkillTable.switchView.title=A táblázat nézetének felcserélése
+SkillTable.showTimeInClub.title=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
 skilltable.youthplayer=ifijátékos
 skilltable.rebought_youthplayer=Visszavásárolt ifijátékos
 PlayerNumber=Mezszám
@@ -694,7 +694,7 @@ links.custom.helptext2=A hivatkozásokat exportálhatod és megoszthatod. Ehhez 
 #following string uses pluralForms
 #following string uses pluralForms
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -704,40 +704,40 @@ copy.ht-ml=Másolás HT-ML-ben
 copy.table=Tablázat másolása HT-ML-ben
 
 #copy
-copy.copyplayerad=A játékoshirdetés vágólapra másolása
-copy.copied=A játékoshirdetést vágólapra másoltad.
+copy.playerad=A játékoshirdetés vágólapra másolása
+copy.playerad.copied=A játékoshirdetést vágólapra másoltad.
 copy.matchid=A mérkőzésazonosító vágólapra másolásához kattints ide
 
-copy.PostID=A hozzászólás számának vágólapra másolása
-CopyPosting=Hozzászólás másolása ebben a stílusban\: %s
-CopyPosting.abbr=Másolás ebben a stílusban\: %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=Wiki
-CopyPosting.style.raw=nyers
-CopyPosting.style.last=legutóbbi
+copy.postid=A hozzászólás számának vágólapra másolása
+copy.posting.title=Hozzászólás másolása ebben a stílusban\: %s
+copy.posting=Másolás ebben a stílusban\: %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=Wiki
+copy.posting.style.raw=nyers
+copy.posting.style.last=legutóbbi
 
-CopyRatings.both=Az értékelések másolása (HT-ML-ben)
-CopyRatings.home=A hazai csapat értékeléseinek másolása (HT-ML-ben)
-CopyRatings.away=A vendégcsapat értékeléseinek másolása (HT-ML-ben)
-CopyRatings.copied=Az értékeléseket vágólapra másoltad.
+copy.ratings.both=Az értékelések másolása (HT-ML-ben)
+copy.ratings.home=A hazai csapat értékeléseinek másolása (HT-ML-ben)
+copy.ratings.away=A vendégcsapat értékeléseinek másolása (HT-ML-ben)
+copy.ratings.copied=Az értékeléseket vágólapra másoltad.
 
-CopyYouth.trainingReport=Edzésjelentés másolása
-CopyYouth.trainingReport.copied=Edzésjelentés másolva.
-CopyYouth.scoutComment=Játékosmegfigyelő jelentésének másolása
-CopyYouth.scoutComment.copied=A játékosmegfigyelő jelentése másolva lett.
-CopyYouth.playerSource=Játékos forrásának másolása
-CopyYouth.playerSource.copied=A játékos forrása másolva lett.
-CopyYouth.fixturesSource=Mérkőzések forrásának másolása
-CopyYouth.fixturesSource.copied=Mérkőzések forrása másolva lett.
-CopyYouth.goto=Ugrás\: %s
+copy.trainingReport=Edzésjelentés másolása
+copy.trainingReport.copied=Edzésjelentés másolva.
+copy.scoutComment=Játékosmegfigyelő jelentésének másolása
+copy.scoutComment.copied=A játékosmegfigyelő jelentése másolva lett.
+copy.playerSource=Játékos forrásának másolása
+copy.playerSource.copied=A játékos forrása másolva lett.
+copy.fixturesSource=Mérkőzések forrásának másolása
+copy.fixturesSource.copied=Mérkőzések forrása másolva lett.
+button.goto=Ugrás\: %s
 
-copy.copy.skilltable=A képességek vágólapra másolása (HT-ML-ben)
-copy.copied.skilltable=A képességtáblázat forráskódját vágólapra másoltad.
-copy.copied.matchid=A mérkőzésazonosítót vágólapra másoltad.
-copy.copied.postid=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
-copy.copied.posting=A következő hozzászólást\: %s vágólapra másoltad.
-copy.copySelected=Kijelölés másolása\: Ctrl + C.
-copy.operaPaste=Beillesztés Shift + bal kattintás együtt.
+copy.skilltable.title=A képességek vágólapra másolása (HT-ML-ben)
+copy.skilltable.copied=A képességtáblázat forráskódját vágólapra másoltad.
+copy.matchid.copied=A mérkőzésazonosítót vágólapra másoltad.
+copy.postid.copied=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
+copy.posting.copied=A következő hozzászólást\: %s vágólapra másoltad.
+specialCopy.hint=Kijelölés másolása\: Ctrl + C.
+specialPaste.hint=Beillesztés Shift + bal kattintás együtt.
 
 #matches
 matches.income=Bevétel\:
@@ -749,7 +749,7 @@ matches.defense=véd.
 matches.attack=tám.
 matches.indfreekick=Közv. pontrúgás
 matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel az általad használt nyelv nincs regisztrálva, vagy mert rossz nyelvet adtál meg a beállítások között. Ellenőrizd, hogy a FoxTrick nyelve megegyezik-e Hattricken használt nyelvvel.
-total_stars=Összes csillag
+matches.lineup.totalStars=Összes csillag
 
 #matchdetail
 match.ratings.midfield=Középpálya
