--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -236,7 +236,7 @@ module.LeagueNewsFilter.desc=Síur til að sýna ákveðnar tegundir af deildarf
 module.LeagueNewsFilter.all.desc=Sýna allar fréttir
 module.LeagueNewsFilter.friendlies.desc=Sýna aðeins alþjóðlega vináttuleiki og ráðningar á nýjum þjálfurum
 module.LeagueNewsFilter.transfers.desc=Sýna aðeins leikmannakaup og sölur
-module.LeagueNewsFilter.lineupChanges.desc=Sýna aðeins breytingar á liðsuppstillingu
+module.LeagueNewsFilter.lineup_changes.desc=Sýna aðeins breytingar á liðsuppstillingu
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Færa framkvæmdarstjóra sem eru nettengdir upp á svæðissíðunni. Varúð\! Þetta verður mjög hægt ef nettengdir notendur fara yfir 100.
 module.TeamPopupLinks.TeamLinks.desc=Bætir við sprettiglugga á liðstengla
@@ -515,9 +515,9 @@ categories.E2=E2
 
 
 # SkillTable
-Skill_table=Hæfnistafla
-Switch_view=Breyta sýn
-Switch_view.title=Breyta um sýn á töflunni.
+SkillTable.header=Hæfnistafla
+SkillTable.switchView=Breyta sýn
+SkillTable.switchView.title=Breyta um sýn á töflunni.
 PlayerNumber=Treyjunúmer
 PlayerNumber.abbr=\#
 TSI=Hæfnismat leikmanns (TSI)
@@ -626,7 +626,7 @@ notify.newMail=Þú hefur fengið %s nýja(n) póst(a)
 #following string uses pluralForms
 notify.newForumMessage=Það eru %s ný svör/svar á spjallinu til þín.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -636,29 +636,29 @@ copy.ht-ml=Afrita í HT-ML
 copy.table=Afrita töflu í HT-ML
 
 #copy
-copy.copyplayerad=Afrita leikmannaauglýsingu á klippiborðið
-copy.copied=Leikmannaauglýsingin hefur verið afrituð á klippiborðið.
+copy.playerad=Afrita leikmannaauglýsingu á klippiborðið
+copy.playerad.copied=Leikmannaauglýsingin hefur verið afrituð á klippiborðið.
 copy.matchid=Smelltu til að afrita leikjanúmer á klippiborð
 
-copy.PostID=Afrita svarnúmer á klippiborð
-CopyPosting=Afrita svar í %s stíl
-CopyPosting.abbr=Afrita í %s stíl
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=síðast
+copy.postid=Afrita svarnúmer á klippiborð
+copy.posting.title=Afrita svar í %s stíl
+copy.posting=Afrita í %s stíl
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
+copy.posting.style.last=síðast
 
-CopyRatings.both=Afrita einkunnagjöf (í HT-ML)
-CopyRatings.home=Afrita einkunnagjöf heimaliðs (í HT-ML)
-CopyRatings.away=Afrita einkunnagjöf gestaliðs (í HT-ML)
-CopyRatings.copied=Einkunnagjöfin hefur verið afrituð á klippiborðið.
+copy.ratings.both=Afrita einkunnagjöf (í HT-ML)
+copy.ratings.home=Afrita einkunnagjöf heimaliðs (í HT-ML)
+copy.ratings.away=Afrita einkunnagjöf gestaliðs (í HT-ML)
+copy.ratings.copied=Einkunnagjöfin hefur verið afrituð á klippiborðið.
 
 
-copy.copy.skilltable=Afrita hæfnistöflu á klippiborðið (í HT-ML)
-copy.copied.skilltable=Hæfnistafla hefur verið afrituð á klippiborðið.
-copy.copied.matchid=Leikjanúmer hefur verið afritað á klippiborðið.
-copy.copied.postid=Svarnúmer [post\=%s] hefur verið afritað á klippiborðið.
-copy.copied.posting=Spjallpóstur %s hefur verið afritaður á klippiborðið.
+copy.skilltable.title=Afrita hæfnistöflu á klippiborðið (í HT-ML)
+copy.skilltable.copied=Hæfnistafla hefur verið afrituð á klippiborðið.
+copy.matchid.copied=Leikjanúmer hefur verið afritað á klippiborðið.
+copy.postid.copied=Svarnúmer [post\=%s] hefur verið afritað á klippiborðið.
+copy.posting.copied=Spjallpóstur %s hefur verið afritaður á klippiborðið.
 
 #matches
 matches.income=Tekjur\:
@@ -670,7 +670,7 @@ matches.defense=vörn
 matches.attack=sókn
 matches.indfreekick=Óbein föst leikatriði
 matches.wronglang=FoxTrick\: Ekki er hægt að sýna tölfræðina vegna þess að tungumálið þitt er ekki skrásett eða vegna þess að þú hefur stillt á rangt tungumál í stillingunum. Vinsamlegast gangið úr skugga um að tungumálið í FoxTrick sé hið sama og þú notar í Hattrick.
-total_stars=Samtals stjörnur
+matches.lineup.totalStars=Samtals stjörnur
 
 #matchdetail
 match.ratings.midfield=Miðja
