--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -273,7 +273,7 @@ module.LeagueNewsFilter.desc=Nella pagina della serie, evidenzia alcuni eventi e
 module.LeagueNewsFilter.all.desc=Mostra tutte le notizie
 module.LeagueNewsFilter.friendlies.desc=Mostra solo amichevoli internazionali e cambi di allenatore
 module.LeagueNewsFilter.transfers.desc=Mostra solo trasferimenti
-module.LeagueNewsFilter.lineupChanges.desc=Mostra solo cambiamenti alla formazione
+module.LeagueNewsFilter.lineup_changes.desc=Mostra solo cambiamenti alla formazione
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Sposta gli utenti online in alto nella pagina delle regioni. Attenzione\! Può essere molto lenta se i giocatori sono più di 100.
 module.TeamPopupLinks.TeamLinks.desc=Visualizza il menu a tendina sui collegamenti alle squadre
@@ -651,13 +651,13 @@ match.role.captain.abbr=Capit.
 match.player.unknown=Giocatore sconosciuto
 
 # SkillTable
-Skill_table=Tabella delle skill
-Switch_view=Cambia vista
-AddHomegrown=Aggiungi giocatori delle giovanili
-showTimeInClub=Mostra il tempo nel club
-Switch_view.title=Cambia la vista della tabella.
-skillTable.addHomegrown=Aggiunge tutti i giocatori cresciuti nella squadra dalla lista dei giocatori attuali
-skillTable.showTimeInClub=Mostra da quanto tempo il giocatore fa parte della prima squadra
+SkillTable.header=Tabella delle skill
+SkillTable.switchView=Cambia vista
+SkillTable.addHomegrown=Aggiungi giocatori delle giovanili
+SkillTable.showTimeInClub=Mostra il tempo nel club
+SkillTable.switchView.title=Cambia la vista della tabella.
+SkillTable.addHomegrown.title=Aggiunge tutti i giocatori cresciuti nella squadra dalla lista dei giocatori attuali
+SkillTable.showTimeInClub.title=Mostra da quanto tempo il giocatore fa parte della prima squadra
 skilltable.youthplayer=Giocatore delle giovanili
 skilltable.rebought_youthplayer=Giocatore delle giovanili ricomprato
 PlayerNumber=Numero maglia
@@ -787,7 +787,7 @@ notify.newMail=Hai ricevuto %s nuova mail.;Hai ricevuto %s nuove mail.
 #following string uses pluralForms
 notify.newForumMessage=C'è %s nuova risposta sul forum.;Ci sono %s nuove risposte sul forum.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -797,40 +797,40 @@ copy.ht-ml=Copia in HT-ML
 copy.table=Copia tabella in HT-ML
 
 #copy
-copy.copyplayerad=Copia le caratteristiche del giocatore negli appunti
-copy.copied=Caratteristiche del giocatore copiate negli appunti
+copy.playerad=Copia le caratteristiche del giocatore negli appunti
+copy.playerad.copied=Caratteristiche del giocatore copiate negli appunti
 copy.matchid=Clicca per copiare il matchID negli appunti
 
-copy.PostID=Copia ID messaggio negli appunti
-CopyPosting=Copia messaggio con lo stile %s
-CopyPosting.abbr=Copia in stile %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=in linea
-CopyPosting.style.last=ultimo
+copy.postid=Copia ID messaggio negli appunti
+copy.posting.title=Copia messaggio con lo stile %s
+copy.posting=Copia in stile %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=in linea
+copy.posting.style.last=ultimo
 
-CopyRatings.both=Copia valutazioni (in HT-ML)
-CopyRatings.home=Copia le valutazioni della squadra di casa negli appunti (in formato tabella)
-CopyRatings.away=Copia le valutazioni della squadra in trasferta negli appunti (in formato tabella)
-CopyRatings.copied=Le valutazioni sono state copiate negli appunti
+copy.ratings.both=Copia valutazioni (in HT-ML)
+copy.ratings.home=Copia le valutazioni della squadra di casa negli appunti (in formato tabella)
+copy.ratings.away=Copia le valutazioni della squadra in trasferta negli appunti (in formato tabella)
+copy.ratings.copied=Le valutazioni sono state copiate negli appunti
 
-CopyYouth.trainingReport=Copia report di allenamento
-CopyYouth.trainingReport.copied=Il rapporto dell'allenamento è stato copiato.
-CopyYouth.scoutComment=Copia il commento dello scout
-CopyYouth.scoutComment.copied=Il commento dello Scout è stato copiato.
-CopyYouth.playerSource=Copia codice sorgente del giocatore
-CopyYouth.playerSource.copied=La sorgente della pagina del giocatore è stata copiata.
-CopyYouth.fixturesSource=Copia sorgente della pagina del calendario
-CopyYouth.fixturesSource.copied=La sorgente della pagina del calendario è stata copiata.
-CopyYouth.goto=Vai a %s
+copy.trainingReport=Copia report di allenamento
+copy.trainingReport.copied=Il rapporto dell'allenamento è stato copiato.
+copy.scoutComment=Copia il commento dello scout
+copy.scoutComment.copied=Il commento dello Scout è stato copiato.
+copy.playerSource=Copia codice sorgente del giocatore
+copy.playerSource.copied=La sorgente della pagina del giocatore è stata copiata.
+copy.fixturesSource=Copia sorgente della pagina del calendario
+copy.fixturesSource.copied=La sorgente della pagina del calendario è stata copiata.
+button.goto=Vai a %s
 
-copy.copy.skilltable=Copia la tabella delle skill negli appunti (in formato tabella)
-copy.copied.skilltable=La tabella delle skill è stata copiata negli appunti
-copy.copied.matchid=L'ID partita è stato copiato negli appunti
-copy.copied.postid=L'ID del messaggio è stato copiato negli appunti
-copy.copied.posting=Il messaggio è stato copiato negli appunti
-copy.copySelected=Copia la selezione con Ctrl + C.
-copy.operaPaste=Incolla con MAIUSC + clic sinistro.
+copy.skilltable.title=Copia la tabella delle skill negli appunti (in formato tabella)
+copy.skilltable.copied=La tabella delle skill è stata copiata negli appunti
+copy.matchid.copied=L'ID partita è stato copiato negli appunti
+copy.postid.copied=L'ID del messaggio è stato copiato negli appunti
+copy.posting.copied=Il messaggio è stato copiato negli appunti
+specialCopy.hint=Copia la selezione con Ctrl + C.
+specialPaste.hint=Incolla con MAIUSC + clic sinistro.
 
 #matches
 matches.income=Incasso\:
@@ -842,7 +842,7 @@ matches.defense=Dif
 matches.attack=Att
 matches.indfreekick=Calci piazzati ind.
 matches.wronglang=Foxtrick\: la lingua che hai impostato in hattrick e' diversa da quella impostata in Foxtrick, quindi le barre non possono essere visualizzate
-total_stars=Stelle totali
+matches.lineup.totalStars=Stelle totali
 
 #matchdetail
 match.ratings.midfield=Centrocampo
