--- a/content/locale/ka/foxtrick.properties
+++ b/content/locale/ka/foxtrick.properties
@@ -242,8 +242,8 @@ match.role.captain.abbr=კაპიტ.
 match.player.unknown=უცნობი მოთამაშე
 
 # SkillTable
-Skill_table=სკილების ცხრილი
-Switch_view.title=სამაგიდო ხედზე გადართვა. რა არის არ ვიცი.
+SkillTable.header=სკილების ცხრილი
+SkillTable.switchView.title=სამაგიდო ხედზე გადართვა. რა არის არ ვიცი.
 skilltable.youthplayer=ახალგაზრდა მოთამაშე
 skilltable.rebought_youthplayer=ხელახლა ყიდვა ახალგაზრდა მოთამაშის
 PlayerNumber=მოთამაშის ნომერი
@@ -354,7 +354,7 @@ links.custom.help=დახმარება
 #following string uses pluralForms
 notify.newForumMessage=აქ %s ფურუმის ახალი პასუხია.;აქ %s ფორუმის ახალი პასუხებია.
 
-matchView.htLive=HT-Live
+MyMonitor.htLive=HT-Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -367,19 +367,19 @@ copy.table=ცხრილის კოპირება HT-ML-ში
 copy.matchid=დააჭირეთ მატჩის ID-ის დასაკოპირებლად
 
 
-CopyRatings.both=რეიტინგების კოპირება (HT-ML-ში)
-CopyRatings.home=მასპინძლის რეიტინგის კოპირება (HT-ML-ში)
-CopyRatings.away=სტუმრის რეიტინგის კოპირება (HT-ML-ში)
-CopyRatings.copied=რეიტინგები დაკოპირდა clipboard-ში.
+copy.ratings.both=რეიტინგების კოპირება (HT-ML-ში)
+copy.ratings.home=მასპინძლის რეიტინგის კოპირება (HT-ML-ში)
+copy.ratings.away=სტუმრის რეიტინგის კოპირება (HT-ML-ში)
+copy.ratings.copied=რეიტინგები დაკოპირდა clipboard-ში.
 
-CopyYouth.trainingReport=ვარჯიშის რეპორტის კოპირება
-CopyYouth.trainingReport.copied=ვარჯიშის რეპორტი დაკოპირდა.
-CopyYouth.scoutComment=სკაუტის კომენტარის კოპირებ
+copy.trainingReport=ვარჯიშის რეპორტის კოპირება
+copy.trainingReport.copied=ვარჯიშის რეპორტი დაკოპირდა.
+copy.scoutComment=სკაუტის კომენტარის კოპირებ
 
-copy.copy.skilltable=სკილების ცხრილის კოპირება to clipboard (HT-ML-ში)
-copy.copied.skilltable=სკილების ცხრილი [post\=%s] დაკოპირდა to the clipboard.
-copy.copied.matchid=მატჩის ID [post\=%s] დაკოპირდა to the clipboard.
-copy.copied.postid=პოსტის ნომერი [post\=%s] დაკოპირდა to the clipboard.
+copy.skilltable.title=სკილების ცხრილის კოპირება to clipboard (HT-ML-ში)
+copy.skilltable.copied=სკილების ცხრილი [post\=%s] დაკოპირდა to the clipboard.
+copy.matchid.copied=მატჩის ID [post\=%s] დაკოპირდა to the clipboard.
+copy.postid.copied=პოსტის ნომერი [post\=%s] დაკოპირდა to the clipboard.
 
 #matches
 matches.income=შემოსავალი\:
@@ -389,7 +389,7 @@ matches.left=მარცხენა
 matches.center=ნახევარდაცვა
 matches.defense=დაცვა
 matches.attack=შეტევა
-total_stars=ვარსკვლავების რაოდენობა
+matches.lineup.totalStars=ვარსკვლავების რაოდენობა
 
 #matchdetail
 match.ratings.midfield=ნახევარდაცვა
