--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -57,7 +57,7 @@ module.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 module.CopyYouth.TrainingReport.desc=Treniņu ziņojums
 module.CopyYouth.ScoutComment.desc=Skauta komentārs
 module.LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
-module.LeagueNewsFilter.lineupChanges.desc=Rādīt tikai izkārtojuma izmaiņas
+module.LeagueNewsFilter.lineup_changes.desc=Rādīt tikai izkārtojuma izmaiņas
 #MoveManagerOnline
 module.TeamPopupLinks.Matches.desc=Spēles
 module.TeamPopupLinks.Players.desc=Spēlētāji
@@ -312,12 +312,12 @@ match.role.captain.abbr=Kapt.
 match.player.unknown=Nezināms spēlētājs
 
 # SkillTable
-Skill_table=Prasmju tabula
-Switch_view=Mainīt skatu
-AddHomegrown=Pievienot klubā uzaugušos spēlētājus
-showTimeInClub=Parādīt klubā pavadīto laiku
-Switch_view.title=Mainīt tabulas skatu.
-skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
+SkillTable.header=Prasmju tabula
+SkillTable.switchView=Mainīt skatu
+SkillTable.addHomegrown=Pievienot klubā uzaugušos spēlētājus
+SkillTable.showTimeInClub=Parādīt klubā pavadīto laiku
+SkillTable.switchView.title=Mainīt tabulas skatu.
+SkillTable.showTimeInClub.title=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
 skilltable.youthplayer=jauniešu spēlētājs
 skilltable.rebought_youthplayer=atpirkts jauniešu spēlētājs
 PlayerNumber=Spēlētāja numurs
@@ -438,7 +438,7 @@ links.custom.help=Palīdzība
 #following string uses pluralForms
 #following string uses pluralForms
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -448,38 +448,38 @@ copy.ht-ml=Kopēt HT-ML
 copy.table=Kopēt tabulu HT-ML
 
 #copy
-copy.copyplayerad=Kopēt spēlētāja reklāmu
-copy.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
+copy.playerad=Kopēt spēlētāja reklāmu
+copy.playerad.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
 copy.matchid=Klikšķiniet, lai kopētu matchID starpliktuvē
 
-copy.PostID=Kopēt PostID starpliktuvē
-CopyPosting=Kopēt ziņu %s stilā
-CopyPosting.abbr=Kopēt %s stilā
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
+copy.postid=Kopēt PostID starpliktuvē
+copy.posting.title=Kopēt ziņu %s stilā
+copy.posting=Kopēt %s stilā
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
 
-CopyRatings.both=Kopēt sniegumu(HT-ML)
-CopyRatings.home=Kopēt mājnieku sniegumu(HT-ML)
-CopyRatings.away=Kopēt viesu sniegumu(HT-ML)
-CopyRatings.copied=Sniegums ir nokopēts starpliktuvē.
+copy.ratings.both=Kopēt sniegumu(HT-ML)
+copy.ratings.home=Kopēt mājnieku sniegumu(HT-ML)
+copy.ratings.away=Kopēt viesu sniegumu(HT-ML)
+copy.ratings.copied=Sniegums ir nokopēts starpliktuvē.
 
-CopyYouth.trainingReport=Kopēt treniņa ziņojumu
-CopyYouth.trainingReport.copied=Treniņa ziņojums ir nokopēts.
-CopyYouth.scoutComment=Kopēt skauta komentāru
-CopyYouth.scoutComment.copied=Skauta komentārs ir nokopēts.
-CopyYouth.playerSource=Kopēt spēlētāja pirmkodu
-CopyYouth.playerSource.copied=Spēlētāja pirmkods tika nokopēts.
-CopyYouth.fixturesSource=Kopēt spēļu kalendāra pirmkodu
-CopyYouth.fixturesSource.copied=Spēļu kalendāra pirmkods ir nokopēts.
-CopyYouth.goto=Doties uz %s
+copy.trainingReport=Kopēt treniņa ziņojumu
+copy.trainingReport.copied=Treniņa ziņojums ir nokopēts.
+copy.scoutComment=Kopēt skauta komentāru
+copy.scoutComment.copied=Skauta komentārs ir nokopēts.
+copy.playerSource=Kopēt spēlētāja pirmkodu
+copy.playerSource.copied=Spēlētāja pirmkods tika nokopēts.
+copy.fixturesSource=Kopēt spēļu kalendāra pirmkodu
+copy.fixturesSource.copied=Spēļu kalendāra pirmkods ir nokopēts.
+button.goto=Doties uz %s
 
-copy.copy.skilltable=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
-copy.copied.skilltable=Prasmju tabula ir iekopēta starpliktuvē.
-copy.copied.matchid=Spēles ID ir iekopēts starpliktuvē.
-copy.copied.postid=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
-copy.copied.posting=Ziņojums %s ir pievienots starpliktuvei.
-copy.copySelected=Kopējiet iezīmēto ar Ctrl + C.
-copy.operaPaste=Ielīmējiet ar Shift + kreisais klikšķis.
+copy.skilltable.title=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
+copy.skilltable.copied=Prasmju tabula ir iekopēta starpliktuvē.
+copy.matchid.copied=Spēles ID ir iekopēts starpliktuvē.
+copy.postid.copied=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
+copy.posting.copied=Ziņojums %s ir pievienots starpliktuvei.
+specialCopy.hint=Kopējiet iezīmēto ar Ctrl + C.
+specialPaste.hint=Ielīmējiet ar Shift + kreisais klikšķis.
 
 #matches
 matches.income=Ienākumi\:
@@ -490,7 +490,7 @@ matches.center=Centra
 matches.defense=aiz
 matches.attack=uzbr
 matches.indfreekick=Net. brīvsitieni
-total_stars=Zvaigznes kopā
+matches.lineup.totalStars=Zvaigznes kopā
 
 #matchdetail
 match.ratings.midfield=Vidējā zona
