--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -184,7 +184,7 @@ module.LeagueNewsFilter.desc=Fuq il-paġna tas-serje jitniżżlu t-timjiet li bi
 module.LeagueNewsFilter.all.desc=Juri l-aħbarijiet kollha
 module.LeagueNewsFilter.friendlies.desc=Juri partiti ta' ħbiberija internazzjonali u kowċis mibdula biss
 module.LeagueNewsFilter.transfers.desc=Juri t-trasferimenti biss
-module.LeagueNewsFilter.lineupChanges.desc=Juri bdil fil-formazzjoni biss
+module.LeagueNewsFilter.lineup_changes.desc=Juri bdil fil-formazzjoni biss
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Imexxi 'l fuq il-maniġers li qegħdin online fuq il-paġna tar-reġjuni. Attent\! Din tista' tieħu ammont ta' ħin konsiderevoli jekk il-lista ta' persuni online taqbeż il-100.
 module.TeamPopupLinks.TeamLinks.desc=Iżid links biex tiftaħ popups fuq it-timijiet
@@ -400,8 +400,8 @@ categories.E2=O2
 
 
 # SkillTable
-Switch_view=Aqleb id-dehra
-Switch_view.title=Aqleb id-dehra tat-tabella.
+SkillTable.switchView=Aqleb id-dehra
+SkillTable.switchView.title=Aqleb id-dehra tat-tabella.
 PlayerNumber=Numru tal-plejer
 PlayerNumber.abbr=\#
 TSI=Total Skill Index
@@ -486,21 +486,21 @@ links.custom.helptext2=Inti tista' tesporta l-links tiegħek u taqsamhom mal-oħ
 # This would look like: Copy player ID: 123456789
 
 #copy
-copy.copyplayerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
-copy.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
+copy.playerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
+copy.playerad.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
 copy.matchid=Agħfas biex tikkopja l-ID tal-logħba għal fuq il-clipboard
 
-copy.PostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
+copy.postid=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
 
-CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
-CopyRatings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
-CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
+copy.ratings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
+copy.ratings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
+copy.ratings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
 
 
-copy.copy.skilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
-copy.copied.matchid=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
-copy.copied.postid=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
-copy.copied.posting=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
+copy.skilltable.title=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
+copy.matchid.copied=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
+copy.postid.copied=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
+copy.posting.copied=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
 
 #matches
 matches.income=Dħul\:
@@ -512,7 +512,7 @@ matches.defense=dif
 matches.attack=att
 matches.indfreekick=Set pieces ind.
 matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l-lingwa tiegħek m'hijiex irreġistrata jew inkella minħabba li int issettjajt il-lingwa l-ħażina fil-preferenzi. Jekk jogħġbok kun cert li l-lingwa ta' Foxtrick hija l-istess bħal-lingwa ta' HT.
-total_stars=Stilel totali
+matches.lineup.totalStars=Stilel totali
 
 #matchdetail
 match.ratings.midfield=Nofs
