--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -274,7 +274,7 @@ module.LeagueNewsFilter.desc=Markeer teams die hun opstelling onlangs hebben gew
 module.LeagueNewsFilter.all.desc=Toon alle nieuwsberichten
 module.LeagueNewsFilter.friendlies.desc=Toon alleen internationale vriendschappelijke wedstrijden en trainerswisselingen
 module.LeagueNewsFilter.transfers.desc=Toon alleen transfers
-module.LeagueNewsFilter.lineupChanges.desc=Toon alleen opstellingswijzigingen
+module.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op\: dit kan erg traag worden als er meer dan 100 managers online zijn.
 module.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
@@ -647,13 +647,13 @@ match.role.captain.abbr=Aanv.
 match.player.unknown=Onbekende speler
 
 # SkillTable
-Skill_table=Vaardighedentabel
-Switch_view=Wissel weergave
-AddHomegrown=Voeg eigen jeugdspelers toe
-showTimeInClub=Laat periode bij club zien
-Switch_view.title=Wissel de weergave van de tabel
-skillTable.addHomegrown=Voeg alle jeugdspelers toe
-skillTable.showTimeInClub=Laat de periode zien sinds de speler bij het senioren team speelt
+SkillTable.header=Vaardighedentabel
+SkillTable.switchView=Wissel weergave
+SkillTable.addHomegrown=Voeg eigen jeugdspelers toe
+SkillTable.showTimeInClub=Laat periode bij club zien
+SkillTable.switchView.title=Wissel de weergave van de tabel
+SkillTable.addHomegrown.title=Voeg alle jeugdspelers toe
+SkillTable.showTimeInClub.title=Laat de periode zien sinds de speler bij het senioren team speelt
 skilltable.youthplayer=jeugdspeler
 skilltable.rebought_youthplayer=Teruggekochte jeugdspeler
 PlayerNumber=Rugnummer
@@ -783,7 +783,7 @@ notify.newMail=Je hebt %s nieuw bericht.;Je hebt %s nieuwe berichten.
 #following string uses pluralForms
 notify.newForumMessage=Je hebt %s nieuw antwoord op een van je forum-berichten.;Je hebt %s nieuwe antwoorden op je forumberichten.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -793,40 +793,40 @@ copy.ht-ml=Kopieer in HT-ML formaat
 copy.table=Kopieer tabel in HT-ML formaat
 
 #copy
-copy.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
-copy.copied=De advertentie is naar het klembord gekopieerd.
+copy.playerad=Kopieer transferadvertentie voor speler naar klembord
+copy.playerad.copied=De advertentie is naar het klembord gekopieerd.
 copy.matchid=Klik hier om het wedstrijd ID naar je klembord te kopiëren
 
-copy.PostID=Kopieer bericht-ID naar klembord
-CopyPosting=Kopieer post in %s stijl
-CopyPosting.abbr=Kopieer in %s stijl
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=origineel
-CopyPosting.style.last=laatste
+copy.postid=Kopieer bericht-ID naar klembord
+copy.posting.title=Kopieer post in %s stijl
+copy.posting=Kopieer in %s stijl
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=origineel
+copy.posting.style.last=laatste
 
-CopyRatings.both=Kopieer ratings naar het klembord (HT-ML opmaak)
-CopyRatings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
-CopyRatings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
-CopyRatings.copied=De ratings zijn naar het klembord gekopieerd.
+copy.ratings.both=Kopieer ratings naar het klembord (HT-ML opmaak)
+copy.ratings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
+copy.ratings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
+copy.ratings.copied=De ratings zijn naar het klembord gekopieerd.
 
-CopyYouth.trainingReport=Kopieer trainings rapport.
-CopyYouth.trainingReport.copied=Trainings rapport is gekopieerd.
-CopyYouth.scoutComment=Kopieer commentaar van scout.
-CopyYouth.scoutComment.copied=Commentaar van scout is gekopieerd.
-CopyYouth.playerSource=Kopieer speler broncode.
-CopyYouth.playerSource.copied=Speler broncode is gekopieerd.
-CopyYouth.fixturesSource=Kopieer wedstrijdschema.
-CopyYouth.fixturesSource.copied=Wedstrijdschema is gekopieerd.
-CopyYouth.goto=Ga naar %s
+copy.trainingReport=Kopieer trainings rapport.
+copy.trainingReport.copied=Trainings rapport is gekopieerd.
+copy.scoutComment=Kopieer commentaar van scout.
+copy.scoutComment.copied=Commentaar van scout is gekopieerd.
+copy.playerSource=Kopieer speler broncode.
+copy.playerSource.copied=Speler broncode is gekopieerd.
+copy.fixturesSource=Kopieer wedstrijdschema.
+copy.fixturesSource.copied=Wedstrijdschema is gekopieerd.
+button.goto=Ga naar %s
 
-copy.copy.skilltable=Kopieer tabel met vaardigheden naar het klembord (HT-ML formaat)
-copy.copied.skilltable=De tabel met vaardigheden is naar het klembord gekopieerd.
-copy.copied.matchid=Het wedstrijd-ID is naar het klembord gekopieerd.
-copy.copied.postid=Het bericht-ID [post\=%s] is naar het klembord gekopieerd.
-copy.copied.posting=Bericht %s is naar het klembord gekopieerd.
-copy.copySelected=Kopieer selectie met CTRL + C.
-copy.operaPaste=Plak met SHIFT + linker muis klik.
+copy.skilltable.title=Kopieer tabel met vaardigheden naar het klembord (HT-ML formaat)
+copy.skilltable.copied=De tabel met vaardigheden is naar het klembord gekopieerd.
+copy.matchid.copied=Het wedstrijd-ID is naar het klembord gekopieerd.
+copy.postid.copied=Het bericht-ID [post\=%s] is naar het klembord gekopieerd.
+copy.posting.copied=Bericht %s is naar het klembord gekopieerd.
+specialCopy.hint=Kopieer selectie met CTRL + C.
+specialPaste.hint=Plak met SHIFT + linker muis klik.
 
 #matches
 matches.income=Recette\:
@@ -838,7 +838,7 @@ matches.defense=verd.
 matches.attack=aanv.
 matches.indfreekick=Ind. vrije trap
 matches.wronglang=FoxTrick\: De statistieken kunnen niet getoond worden, omdat jouw taal niet is geregistreerd of omdat je de verkeerde taal in je instellingen hebt gekozen. Zorg er voor dat je FoxTrick taalinstellingen gelijk zijn aan je Hattrick taalinstellingen.
-total_stars=Totaal aantal sterren
+matches.lineup.totalStars=Totaal aantal sterren
 
 #matchdetail
 match.ratings.midfield=Middenveld
