--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -218,7 +218,7 @@ module.LeagueNewsFilter.desc=Uthev lag som endra eller sende langoppstillinga ny
 module.LeagueNewsFilter.all.desc=Syn alle nyhende
 module.LeagueNewsFilter.friendlies.desc=Syn kun internasjonale vennskapskampar og trenarbyte
 module.LeagueNewsFilter.transfers.desc=Syn kun overgangar
-module.LeagueNewsFilter.lineupChanges.desc=Syn kun lagoppstillingsendringar
+module.LeagueNewsFilter.lineup_changes.desc=Syn kun lagoppstillingsendringar
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Flyttar pålogga managerar opp på regionsida. Advarsel\! Dette vert veldig treigt dersom lista med pålogga brukarar kjem over 100
 module.TeamPopupLinks.TeamLinks.desc=Legg sprett-opplenkje for lag til laglenkjer
@@ -455,9 +455,9 @@ categories.E2=E2
 
 
 # SkillTable
-Skill_table=Ferdigheitstabell
-Switch_view=Endre visning
-Switch_view.title=Endre visning av tabell.
+SkillTable.header=Ferdigheitstabell
+SkillTable.switchView=Endre visning
+SkillTable.switchView.title=Endre visning av tabell.
 PlayerNumber=Spelarnummer
 PlayerNumber.abbr=\#
 TSI=Total Skill Index
@@ -573,29 +573,29 @@ copy.ht-ml=Kopier i HT-ML
 copy.table=Kopier tabell i HT-ML
 
 #copy
-copy.copyplayerad=Kopier spelarannonse
-copy.copied=Spelarannonsa har vorte kopiert.
+copy.playerad=Kopier spelarannonse
+copy.playerad.copied=Spelarannonsa har vorte kopiert.
 copy.matchid=Klikk for å kopiera kampID
 
-copy.PostID=Kopier PostID
-CopyPosting=Kopier post i %s stil
-CopyPosting.abbr=Kopier i %s stil
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=rå
-CopyPosting.style.last=siste
+copy.postid=Kopier PostID
+copy.posting.title=Kopier post i %s stil
+copy.posting=Kopier i %s stil
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=rå
+copy.posting.style.last=siste
 
-CopyRatings.both=Kopier ratingane (i HT-ML)
-CopyRatings.home=Kopier heimelaget sin rating (i HT-ML)
-CopyRatings.away=Kopier ratingane til bortelaget (i HT-ML)
-CopyRatings.copied=Ratingane har vorte kopiert.
+copy.ratings.both=Kopier ratingane (i HT-ML)
+copy.ratings.home=Kopier heimelaget sin rating (i HT-ML)
+copy.ratings.away=Kopier ratingane til bortelaget (i HT-ML)
+copy.ratings.copied=Ratingane har vorte kopiert.
 
 
-copy.copy.skilltable=Kopier ferdigheitstabell (i HT-ML)
-copy.copied.skilltable=Ferdigheitstabellen har vorte kopiert
-copy.copied.matchid=Kamp-ID har vorte kopiert.
-copy.copied.postid=Post-ID [post\=%s] har vorte kopiert.
-copy.copied.posting=Innlegget %s har vorte kopiert.
+copy.skilltable.title=Kopier ferdigheitstabell (i HT-ML)
+copy.skilltable.copied=Ferdigheitstabellen har vorte kopiert
+copy.matchid.copied=Kamp-ID har vorte kopiert.
+copy.postid.copied=Post-ID [post\=%s] har vorte kopiert.
+copy.posting.copied=Innlegget %s har vorte kopiert.
 
 #matches
 matches.income=Tent\:
@@ -607,7 +607,7 @@ matches.defense=Forsvar
 matches.attack=Angrep
 matches.indfreekick=Indirekte daudball
 matches.wronglang=FoxTrick\: Ratinga kan ikkje verte vist, sidan språket ditt ikkje har vorte lagd til, eller sidan du har vald feil språk i innstillingar. Ver god sjekk at du har same språk i Foxtrick som på Hattrick.
-total_stars=Totalt antal stjerner
+matches.lineup.totalStars=Totalt antal stjerner
 
 #matchdetail
 match.ratings.midfield=Midtbane
