--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -194,8 +194,8 @@ Set_pieces=Dødball
 
 
 # SkillTable
-Switch_view=Bytte visning
-showTimeInClub=Vis tid i klubben
+SkillTable.switchView=Bytte visning
+SkillTable.showTimeInClub=Vis tid i klubben
 Stamina=Kondisjon
 #following string uses pluralForms
 Coach=Trener
@@ -225,10 +225,10 @@ links.custom.help=Hjelp
 # This would look like: Copy player ID: 123456789
 
 #copy
-copy.copyplayerad=Kopier spillerannonse til utklippstavlen
-copy.copied=Spilleren har blitt kopiert til utklippstavlen.
+copy.playerad=Kopier spillerannonse til utklippstavlen
+copy.playerad.copied=Spilleren har blitt kopiert til utklippstavlen.
 
-copy.PostID=Kopier til utklippstavle
+copy.postid=Kopier til utklippstavle
 
 
 
@@ -241,7 +241,7 @@ matches.center=Midt
 matches.defense=forsvar
 matches.attack=angrep
 matches.indfreekick=Indirekte frispark
-total_stars=Totalt antall stjerner
+matches.lineup.totalStars=Totalt antall stjerner
 
 #matchdetail
 match.ratings.midfield=Midtbane
