--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -214,7 +214,7 @@ module.LeagueNewsFilter.desc=Filtruje wydarzenia pokazywane na stronie ligi. Wyb
 module.LeagueNewsFilter.all.desc=Pokazuj wszystkie wydarzenia
 module.LeagueNewsFilter.friendlies.desc=Pokazuj tylko informacje o sparingach międzynarodowych i zmianach trenera
 module.LeagueNewsFilter.transfers.desc=Pokazuj tylko informacje o transferach
-module.LeagueNewsFilter.lineupChanges.desc=Pokazuj tylko informacje o zmianie rozkazów meczowych
+module.LeagueNewsFilter.lineup_changes.desc=Pokazuj tylko informacje o zmianie rozkazów meczowych
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Przesuwa w górę listę zalogowanych prezesów na stronie regionu. Uwaga\! Hattrick może działać bardzo wolno jeśli liczba zalogowanych graczy przekroczy 100.
 module.TeamPopupLinks.TeamLinks.desc=Aktywuje moduł TeamPopupLinks dla drużyn klubowych
@@ -444,9 +444,9 @@ categories.E2=E2
 
 
 # SkillTable
-Skill_table=Tabela umiejętności
-Switch_view=Zmień widok
-Switch_view.title=Zmienia widok tabeli
+SkillTable.header=Tabela umiejętności
+SkillTable.switchView=Zmień widok
+SkillTable.switchView.title=Zmienia widok tabeli
 PlayerNumber=Numer zawodnika
 PlayerNumber.abbr=\#
 TSI=Total Skill Index
@@ -558,26 +558,26 @@ copy.ht-ml=Kopiuj link w HT-ML
 copy.table=Kopiuj tabelę w HT-ML
 
 #copy
-copy.copyplayerad=Kopiuj reklamę zawodnika do schowka
-copy.copied=Reklama skopiowana\!
+copy.playerad=Kopiuj reklamę zawodnika do schowka
+copy.playerad.copied=Reklama skopiowana\!
 copy.matchid=Kliknij, aby skopiować matchID
 
-copy.PostID=Kopiuj postID do schowka
-CopyPosting=Kopiuj w stylu %s
-CopyPosting.abbr=Kopiuj w stylu %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
+copy.postid=Kopiuj postID do schowka
+copy.posting.title=Kopiuj w stylu %s
+copy.posting=Kopiuj w stylu %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
 
-CopyRatings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
-CopyRatings.away=Kopiuj oceny gości do schowka (HT-BBCode)
-CopyRatings.copied=Zrobione\!
+copy.ratings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
+copy.ratings.away=Kopiuj oceny gości do schowka (HT-BBCode)
+copy.ratings.copied=Zrobione\!
 
 
-copy.copy.skilltable=Kopiuj umiejętności do schowka
-copy.copied.matchid=Zrobione\!
-copy.copied.postid=Post [post\=%s] został skopiowany do schowka\!
-copy.copied.posting=Postujący %s został skopiowany do schowka\!
+copy.skilltable.title=Kopiuj umiejętności do schowka
+copy.matchid.copied=Zrobione\!
+copy.postid.copied=Post [post\=%s] został skopiowany do schowka\!
+copy.posting.copied=Postujący %s został skopiowany do schowka\!
 
 #matches
 matches.income=Dochód\:
@@ -589,7 +589,7 @@ matches.defense=Obrona
 matches.attack=Atak
 matches.indfreekick=Wolne pośr.
 matches.wronglang=FoxTrick\: Statystyki nie mogą zostać pokazane, gdyż Twój język nie jest obsługiwany bądź wybrałeś zły język w opcjach FoxTricka
-total_stars=Łączna liczba gwiazdek
+matches.lineup.totalStars=Łączna liczba gwiazdek
 
 #matchdetail
 match.ratings.midfield=Pomoc
