--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -188,7 +188,7 @@ module.LeagueNewsFilter.desc=Pridáva filter pre ligové novinky. Nastavte si pr
 module.LeagueNewsFilter.all.desc=Zobraziť všetky novinky
 module.LeagueNewsFilter.friendlies.desc=Zobraziť iba medzinárodné priateĺské zápasy a zmeny trénerov
 module.LeagueNewsFilter.transfers.desc=Zobraziť iba prestupy
-module.LeagueNewsFilter.lineupChanges.desc=Zobraziť iba zmeny v zostavách
+module.LeagueNewsFilter.lineup_changes.desc=Zobraziť iba zmeny v zostavách
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Presúva manažérov online nahor na stránke s regiónom. Upozornenie\! Ak je počet online užívateľov väčší ako 100, stáva sa to veľmi pomalým\!
 module.TeamPopupLinks.TeamLinks.desc=Pridáva TeamPopupLinks do tímových odkazov
@@ -399,9 +399,9 @@ categories.E2=E2
 
 
 # SkillTable
-Skill_table=Tabuľka skillov
-Switch_view=Zmeniť pohľad
-Switch_view.title=Prehodiť zobrazenie tabuľky.
+SkillTable.header=Tabuľka skillov
+SkillTable.switchView=Zmeniť pohľad
+SkillTable.switchView.title=Prehodiť zobrazenie tabuľky.
 PlayerNumber=Číslo hráća
 PlayerNumber.abbr=\#
 TSI=Total Skill Index
@@ -490,22 +490,22 @@ links.custom.helptext2=Môžete exportovať odkazy a zdielať ich. Aby ste to ur
 # This would look like: Copy player ID: 123456789
 
 #copy
-copy.copyplayerad=Kopírovať vlastnosti hráča do schránky
-copy.copied=Informácie o hráčovi boli vložené do schránky.
+copy.playerad=Kopírovať vlastnosti hráča do schránky
+copy.playerad.copied=Informácie o hráčovi boli vložené do schránky.
 copy.matchid=Klikni pre skopírovanie ID zápasu do schránky
 
-copy.PostID=Kopírovať do schránky
+copy.postid=Kopírovať do schránky
 
-CopyRatings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
-CopyRatings.away=Skopírovať ratingy hosťujúceho tímu (v HT-ML formáte)
-CopyRatings.copied=Ratingy boli skopírované do schránky.
+copy.ratings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
+copy.ratings.away=Skopírovať ratingy hosťujúceho tímu (v HT-ML formáte)
+copy.ratings.copied=Ratingy boli skopírované do schránky.
 
 
-copy.copy.skilltable=Skopírovať tabuľku so skillmi do schránky (v HT-ML formáte)
-copy.copied.skilltable=Kód tabuľky so skillmi bol skopírovaný do schránky.
-copy.copied.matchid=ID zápasu bolo skopírované do schránky.
-copy.copied.postid=ID príspevku bolo skopírované do schránky.
-copy.copied.posting=Príspevok bol skopírovaný do schránky.
+copy.skilltable.title=Skopírovať tabuľku so skillmi do schránky (v HT-ML formáte)
+copy.skilltable.copied=Kód tabuľky so skillmi bol skopírovaný do schránky.
+copy.matchid.copied=ID zápasu bolo skopírované do schránky.
+copy.postid.copied=ID príspevku bolo skopírované do schránky.
+copy.posting.copied=Príspevok bol skopírovaný do schránky.
 
 #matches
 matches.income=Príjem\:
@@ -517,7 +517,7 @@ matches.defense=obrana
 matches.attack=útok
 matches.indfreekick=Nepriame kopy
 matches.wronglang=FoxTrick\: Štatistiky nemôžu byť zobrazené, lebo Váš jazyk nie je registrovaný, prípadne v nastaveniach je zvolený nesprávny jazyk. Uistite sa, že jazyk nastavený vo foxtricku je rovnaký ako Váš jazyk na HT.
-total_stars=Celkový počet hviezdičiek
+matches.lineup.totalStars=Celkový počet hviezdičiek
 
 #matchdetail
 match.ratings.midfield=Záloha
