--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -262,7 +262,7 @@ module.LeagueNewsFilter.desc=Lägger till filter för serienyheter. Sätt ditt f
 module.LeagueNewsFilter.all.desc=Visa alla nyheter
 module.LeagueNewsFilter.friendlies.desc=Visa alla internationella träningsmatcher och bytta tränare
 module.LeagueNewsFilter.transfers.desc=Visa endast transfers
-module.LeagueNewsFilter.lineupChanges.desc=Visa endast laguppställningsändringar
+module.LeagueNewsFilter.lineup_changes.desc=Visa endast laguppställningsändringar
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Flyttar online managers upp på regionsidan. Varning\! Detta blir mycket långsamt om listan blir över 100.
 module.TeamPopupLinks.TeamLinks.desc=Lägg till Lag-popup-länkar till laglänkar
@@ -620,13 +620,13 @@ match.role.captain.abbr=Kapt.
 match.player.unknown=Okänd spelare
 
 # SkillTable
-Skill_table=Förmågetabell
-Switch_view=Växla vy
-AddHomegrown=Add homegrown players
-showTimeInClub=Visa tid i klubben
-Switch_view.title=Växla vy
-skillTable.addHomegrown=Adds all homegrown players from the current
-skillTable.showTimeInClub=Visar tiden sedan spelaren gick med i klubbens seniorlag
+SkillTable.header=Förmågetabell
+SkillTable.switchView=Växla vy
+SkillTable.addHomegrown=Add homegrown players
+SkillTable.showTimeInClub=Visa tid i klubben
+SkillTable.switchView.title=Växla vy
+SkillTable.addHomegrown.title=Adds all homegrown players from the current
+SkillTable.showTimeInClub.title=Visar tiden sedan spelaren gick med i klubbens seniorlag
 skilltable.youthplayer=juniorspelare
 skilltable.rebought_youthplayer=återköpt juniorspelare
 PlayerNumber=Tröjnummer
@@ -752,7 +752,7 @@ notify.newMail=Du har fått %s nya mail.
 #following string uses pluralForms
 notify.newForumMessage=Det finns %s nya forumsvar till dig.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -762,40 +762,40 @@ copy.ht-ml=Kopiera innehåll i HT-ML
 copy.table=Kopiera tabell HT-ML
 
 #copy
-copy.copyplayerad=Kopiera som spelarannons till urklipp.
-copy.copied=Spelarannons har kopierats till urklipp.
+copy.playerad=Kopiera som spelarannons till urklipp.
+copy.playerad.copied=Spelarannons har kopierats till urklipp.
 copy.matchid=Klicka för att kopiera matchID till urklipp
 
-copy.PostID=Kopiera InläggsId till urklipp
-CopyPosting=Kopiera post i %s stil
-CopyPosting.abbr=Kopiera i %s stil
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=senaste
+copy.postid=Kopiera InläggsId till urklipp
+copy.posting.title=Kopiera post i %s stil
+copy.posting=Kopiera i %s stil
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
+copy.posting.style.last=senaste
 
-CopyRatings.both=Kopiera betyg (HT-ML)
-CopyRatings.home=Kopiera hemmalagets betyg till urklipp (HT-ML)
-CopyRatings.away=Kopiera bortalagets betyg till urklipp (HT-ML)
-CopyRatings.copied=Betygen har kopierats till urklipp.
+copy.ratings.both=Kopiera betyg (HT-ML)
+copy.ratings.home=Kopiera hemmalagets betyg till urklipp (HT-ML)
+copy.ratings.away=Kopiera bortalagets betyg till urklipp (HT-ML)
+copy.ratings.copied=Betygen har kopierats till urklipp.
 
-CopyYouth.trainingReport=Kopiera träningsrapport till urklipp
-CopyYouth.trainingReport.copied=Träningsrapporten har kopierats till urklipp.
-CopyYouth.scoutComment=Kopiera scoutrapport till urklipp
-CopyYouth.scoutComment.copied=Scoutrapporten har kopierats till urklipp.
-CopyYouth.playerSource=Kopiera källkoden för spelare till urklipp (för hattrick-youthclub.org)
-CopyYouth.playerSource.copied=Spelarens källkod har kopierats till urklipp.
-CopyYouth.fixturesSource=Kopiera källkoden för spelschemat
-CopyYouth.fixturesSource.copied=Spelschemats källkod har kopierats till urklipp.
-CopyYouth.goto=Gå till %s
+copy.trainingReport=Kopiera träningsrapport till urklipp
+copy.trainingReport.copied=Träningsrapporten har kopierats till urklipp.
+copy.scoutComment=Kopiera scoutrapport till urklipp
+copy.scoutComment.copied=Scoutrapporten har kopierats till urklipp.
+copy.playerSource=Kopiera källkoden för spelare till urklipp (för hattrick-youthclub.org)
+copy.playerSource.copied=Spelarens källkod har kopierats till urklipp.
+copy.fixturesSource=Kopiera källkoden för spelschemat
+copy.fixturesSource.copied=Spelschemats källkod har kopierats till urklipp.
+button.goto=Gå till %s
 
-copy.copy.skilltable=Kopiera förmågetabell(SkillTable) till urklipp (HT-ML).
-copy.copied.skilltable=Tabellen har kopierats till urklipp.
-copy.copied.matchid=MatchID har kopierats till urklipp.
-copy.copied.postid=PostD [post\=%s] har kopierats till urklipp.
-copy.copied.posting=Post %s har kopierats till urklipp.
-copy.copySelected=Kopiera markering med Ctrl + C.
-copy.operaPaste=Klistra in med Shift + vänsterklick.
+copy.skilltable.title=Kopiera förmågetabell(SkillTable) till urklipp (HT-ML).
+copy.skilltable.copied=Tabellen har kopierats till urklipp.
+copy.matchid.copied=MatchID har kopierats till urklipp.
+copy.postid.copied=PostD [post\=%s] har kopierats till urklipp.
+copy.posting.copied=Post %s har kopierats till urklipp.
+specialCopy.hint=Kopiera markering med Ctrl + C.
+specialPaste.hint=Klistra in med Shift + vänsterklick.
 
 #matches
 matches.income=Intäkt\:
@@ -807,7 +807,7 @@ matches.defense=för
 matches.attack=anf
 matches.indfreekick=Ind. frisparkar
 matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk inte är registrerat eller för att du har satt fel språk i inställningarna. Säkerställ att ditt språk i Foxtrick och Hattrick är samma.
-total_stars=Totalt antal stjärnor
+matches.lineup.totalStars=Totalt antal stjärnor
 
 #matchdetail
 match.ratings.midfield=Mittfält
