--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -270,7 +270,7 @@ module.LeagueNewsFilter.desc=Belli tiplerdeki lig haberlerini göstermek için f
 module.LeagueNewsFilter.all.desc=Tüm haberleri göster
 module.LeagueNewsFilter.friendlies.desc=Yalnızca uluslar arası hazırlık maçlarını ve değiştirilen antrenörleri göster
 module.LeagueNewsFilter.transfers.desc=Sadece transferleri göster
-module.LeagueNewsFilter.lineupChanges.desc=Sadece kadro değişikliklerini göster
+module.LeagueNewsFilter.lineup_changes.desc=Sadece kadro değişikliklerini göster
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Bölge sayfasında online olan kullanıcıları üste taşır. Dikkat\! Eğer online kullanıcı sayısı 100 ü geçerse bu seçenek çok yavaşlar.
 module.TeamPopupLinks.TeamLinks.desc=takım linklerine bağlantı ekle
@@ -643,13 +643,13 @@ match.role.captain.abbr=Kap.
 match.player.unknown=Bilinmeyen oyuncu
 
 # SkillTable
-Skill_table=Yetenek tablosu
-Switch_view=Görünümü değiştir
-AddHomegrown=Takımda yetişmiş oyuncuları ekle
-showTimeInClub=Kulüpteki geçirdiği süreyi göster
-Switch_view.title=Tablonun görünümünü değiştir.
-skillTable.addHomegrown=Takımda yetişen oyuncuları mevcut oyuncular arasından ekler
-skillTable.showTimeInClub=Oyuncunun klübün As takımına katıldığı zamanı gösterir
+SkillTable.header=Yetenek tablosu
+SkillTable.switchView=Görünümü değiştir
+SkillTable.addHomegrown=Takımda yetişmiş oyuncuları ekle
+SkillTable.showTimeInClub=Kulüpteki geçirdiği süreyi göster
+SkillTable.switchView.title=Tablonun görünümünü değiştir.
+SkillTable.addHomegrown.title=Takımda yetişen oyuncuları mevcut oyuncular arasından ekler
+SkillTable.showTimeInClub.title=Oyuncunun klübün As takımına katıldığı zamanı gösterir
 skilltable.youthplayer=genç oyuncusu
 skilltable.rebought_youthplayer=Yeniden satın alınmış altyapı oyuncusu
 PlayerNumber=Oyuncu sayısı
@@ -779,7 +779,7 @@ notify.newMail=%s yeni ileti aldınız.;%s yeni ileti aldınız.
 #following string uses pluralForms
 notify.newForumMessage=%s yeni forum mesajı aldınız.;%s yeni forum mesajı aldınız.
 
-matchView.htLive=HT Canlı
+MyMonitor.htLive=HT Canlı
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -789,40 +789,40 @@ copy.ht-ml=HT-ML e kopyala
 copy.table=tablo yu HT-ML e kopyala
 
 #copy
-copy.copyplayerad=oyuncu reklamı kopyala
-copy.copied=Oyuncu reklamı panoya kopyalandı.
+copy.playerad=oyuncu reklamı kopyala
+copy.playerad.copied=Oyuncu reklamı panoya kopyalandı.
 copy.matchid=Panoya matchID kopyalamak için tıklayın
 
-copy.PostID=PostID'yi panoya kopyala
-CopyPosting=Gönderimi %s biçiminde kopyala
-CopyPosting.abbr=%s şeklinde kopyala
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=Sıra
-CopyPosting.style.last=Son
+copy.postid=PostID'yi panoya kopyala
+copy.posting.title=Gönderimi %s biçiminde kopyala
+copy.posting=%s şeklinde kopyala
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=Sıra
+copy.posting.style.last=Son
 
-CopyRatings.both=Değerleri kopyala (HT-ML'de)
-CopyRatings.home=Ev sahibi takımın değerlerini kopyala (HT-ML'de)
-CopyRatings.away=Deplasman takımı değerlerini kopyala (HT-ML'de)
-CopyRatings.copied=Maç değerleri panoya kopyalandı.
+copy.ratings.both=Değerleri kopyala (HT-ML'de)
+copy.ratings.home=Ev sahibi takımın değerlerini kopyala (HT-ML'de)
+copy.ratings.away=Deplasman takımı değerlerini kopyala (HT-ML'de)
+copy.ratings.copied=Maç değerleri panoya kopyalandı.
 
-CopyYouth.trainingReport=Antreman raporunu kopyala
-CopyYouth.trainingReport.copied=Antreman raporu kopyalandı.
-CopyYouth.scoutComment=Gözcü yorumunu kopyala
-CopyYouth.scoutComment.copied=Gözcü yorumu kopyalandı.
-CopyYouth.playerSource=Oyuncu kaynağını kopyala
-CopyYouth.playerSource.copied=Oyuncu kaynağı kopyalandı.
-CopyYouth.fixturesSource=Fikstürü kopyala
-CopyYouth.fixturesSource.copied=Fikstür kopyalandı.
-CopyYouth.goto=%s'e git
+copy.trainingReport=Antreman raporunu kopyala
+copy.trainingReport.copied=Antreman raporu kopyalandı.
+copy.scoutComment=Gözcü yorumunu kopyala
+copy.scoutComment.copied=Gözcü yorumu kopyalandı.
+copy.playerSource=Oyuncu kaynağını kopyala
+copy.playerSource.copied=Oyuncu kaynağı kopyalandı.
+copy.fixturesSource=Fikstürü kopyala
+copy.fixturesSource.copied=Fikstür kopyalandı.
+button.goto=%s'e git
 
-copy.copy.skilltable=Yetenek tablosunu panoya kopyala (HTML )
-copy.copied.skilltable=Yetenek tablosu panoya kopyalandı
-copy.copied.matchid=Maç Id'si panoya kopyalandı
-copy.copied.postid=Msj No[msj\=%s] panoya kopyalandı.\n
-copy.copied.posting=Gönderiminiz %s pano'ya kopyalandı.
-copy.copySelected=Ctrl C ile kopyalayın seçimi.
-copy.operaPaste=Shift+Sol tıklama ile yapıştırın.
+copy.skilltable.title=Yetenek tablosunu panoya kopyala (HTML )
+copy.skilltable.copied=Yetenek tablosu panoya kopyalandı
+copy.matchid.copied=Maç Id'si panoya kopyalandı
+copy.postid.copied=Msj No[msj\=%s] panoya kopyalandı.\n
+copy.posting.copied=Gönderiminiz %s pano'ya kopyalandı.
+specialCopy.hint=Ctrl C ile kopyalayın seçimi.
+specialPaste.hint=Shift+Sol tıklama ile yapıştırın.
 
 #matches
 matches.income=Gelir\:
@@ -834,7 +834,7 @@ matches.defense=def
 matches.attack=atak
 matches.indfreekick=Endirekt serbet vuruş
 matches.wronglang=FoxTrick \: Dil'iniz kayıtlı olmadığından yada tercihlerinizde yanlış dil seçiminde bulunduğunuzdan dolayı İstatistikler gösterilemiyor. Lütfen Foxtrick dil seçiminizin Hattrick dil seçiminizle aynı olsun.\n
-total_stars=Toplam yıldız
+matches.lineup.totalStars=Toplam yıldız
 
 #matchdetail
 match.ratings.midfield=Orta Saha
