--- a/content/locale/vls/foxtrick.properties
+++ b/content/locale/vls/foxtrick.properties
@@ -239,7 +239,7 @@ module.LeagueNewsFilter.desc=Markeer teams die hun opstelling onlangs hebben gew
 module.LeagueNewsFilter.all.desc=Toon alle nieuwsberichten
 module.LeagueNewsFilter.friendlies.desc=Toon alleen internationale vriendschappelijke wedstrijden en trainerswisselingen
 module.LeagueNewsFilter.transfers.desc=Toon alleen transfers
-module.LeagueNewsFilter.lineupChanges.desc=Toon alleen opstellingswijzigingen
+module.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op: dit kan erg traag worden als er meer dan 100 managers online zijn.
 module.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
@@ -430,13 +430,13 @@ ForumPreview.preview=Voorbeeld
 ForumPreview.send=Verstuur
 
 #Forums
-copy.PostID=Kopieer bericht-ID naar klembord
-CopyPosting=Kopieer post in %s stijl
-CopyPosting.abbr=Kopieer in %s stijl
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=origineel
-CopyPosting.style.last=laatste
+copy.postid=Kopieer bericht-ID naar klembord
+copy.posting.title=Kopieer post in %s stijl
+copy.posting=Kopieer in %s stijl
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=origineel
+copy.posting.style.last=laatste
 
 ForumYouthIcons.toolbar.youth=Jeugd links
 ForumYouthIcons.toolbar.main=Hoofd Links
@@ -666,7 +666,7 @@ ExtraPlayerInfo.balancedTrainer=Een %s trainer die noch aanvallend noch verdedig
 notify.newMail=Je hebt %s nieuw(e) bericht(en).
 notify.newForumMessage=Je hebt %s nieuw(e) antwoord(en) op een eigen forum-bericht.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 
 module.modules_allpages=Modules die op alle pagina's werken
@@ -679,8 +679,8 @@ CurrentSquad=Huidig team
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
 sidebarBox.actions=Acties
 ManagerButtons.writeInGuestbook=Schrijf in het gastenboek
-copy.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
-copy.copied=De advertentie is naar het klembord gekopieerd.
+copy.playerad=Kopieer transferadvertentie voor speler naar klembord
+copy.playerad.copied=De advertentie is naar het klembord gekopieerd.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -689,30 +689,30 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-CopyRatings.both=Kopieer ratings naar het klembord (HT-ML opmaak)
-CopyRatings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
-CopyRatings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
-CopyRatings.copied=De ratings zijn naar het klembord gekopieerd.
+copy.ratings.both=Kopieer ratings naar het klembord (HT-ML opmaak)
+copy.ratings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
+copy.ratings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
+copy.ratings.copied=De ratings zijn naar het klembord gekopieerd.
 
-CopyYouth.trainingReport=Kopieer trainings rapport.
-CopyYouth.trainingReport.copied=Trainings rapport is gekopieerd.
-CopyYouth.scoutComment=Kopieer commentaar van scout.
-CopyYouth.scoutComment.copied=Commentaar van scout is gekopieerd.
-CopyYouth.playerSource=Kopieer speler broncode.
-CopyYouth.playerSource.copied=Speler broncode is gekopieerd.
-CopyYouth.fixturesSource=Kopieer wedstrijdschema.
-CopyYouth.fixturesSource.copied=Wedstrijdschema is gekopieerd.
-CopyYouth.goto=Ga naar %s
+copy.trainingReport=Kopieer trainings rapport.
+copy.trainingReport.copied=Trainings rapport is gekopieerd.
+copy.scoutComment=Kopieer commentaar van scout.
+copy.scoutComment.copied=Commentaar van scout is gekopieerd.
+copy.playerSource=Kopieer speler broncode.
+copy.playerSource.copied=Speler broncode is gekopieerd.
+copy.fixturesSource=Kopieer wedstrijdschema.
+copy.fixturesSource.copied=Wedstrijdschema is gekopieerd.
+button.goto=Ga naar %s
 
-copy.copySelected=Kopieer selectie met CTRL+C.
-copy.operaPaste=Plak met SHIFT+Linker muis klik
+specialCopy.hint=Kopieer selectie met CTRL+C.
+specialPaste.hint=Plak met SHIFT+Linker muis klik
 
 copy.youthclub=hattrick-youthclub.org
-copy.copy.skilltable=Kopieer tabel met vaardigheden naar het klembord (HT forum opmaak)
-copy.copied.skilltable=De tabel met vaardigheden is naar het klembord gekopieerd.
-copy.copied.matchid=Het wedstrijd-ID is naar het klembord gekopieerd.
-copy.copied.postid=Het bericht-ID is naar het klembord gekopieerd.
-copy.copied.posting=Het bericht is naar het klembord gekopieerd.
+copy.skilltable.title=Kopieer tabel met vaardigheden naar het klembord (HT forum opmaak)
+copy.skilltable.copied=De tabel met vaardigheden is naar het klembord gekopieerd.
+copy.matchid.copied=Het wedstrijd-ID is naar het klembord gekopieerd.
+copy.postid.copied=Het bericht-ID is naar het klembord gekopieerd.
+copy.posting.copied=Het bericht is naar het klembord gekopieerd.
 copy.youthstatistics=Jeugd statistieken ht-ys.org
 
 #matches
@@ -759,7 +759,7 @@ TeamPopupLinks.prefsCaption=Link voorkeuren
 TeamPopupLinks.ShowByDefault=Laat standaard zien
 TeamPopupLinks.ShowOnMore=Laat zien na een klik op 'meer...'
 
-total_stars=Totaal aantal sterren
+matches.lineup.totalStars=Totaal aantal sterren
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Toon kaart
@@ -772,7 +772,7 @@ flagCollectionToMap.SAmerica=Zuid-Amerika
 flagCollectionToMap.World=Wereld
 
 # SkillTable
-Skill_table=Vaardighedentabel
+SkillTable.header=Vaardighedentabel
 
 Nationality=Nationaliteit
 Nationality.abbr=Nat
@@ -819,10 +819,10 @@ Filters.maximum=Maximaal
 RapidId.viewById=Bekijk op ID
 
 # SkillTable
-Switch_view.title=Wissel de weergave van de tabel
-skillTable.addHomegrown=Voeg alle jeugdspelers toe
+SkillTable.switchView.title=Wissel de weergave van de tabel
+SkillTable.addHomegrown.title=Voeg alle jeugdspelers toe
 
-skillTable.showTimeInClub=Laat de tijd zien sinds de speler bij het senioren team speelt
+SkillTable.showTimeInClub.title=Laat de tijd zien sinds de speler bij het senioren team speelt
 module.SkillTable.detach=Koppel los
 
 # External Chat
@@ -889,11 +889,11 @@ LocalTime.local.title=Tijd in locale tijdzone. Klik op de klok om te wisselen na
 #actions
 button.copy=Kopieer
 RapidId.view=Bekijk
-Switch_view=Wissel weergave
+SkillTable.switchView=Wissel weergave
 Detach=Koppel los
-AddHomegrown=Voeg eigen jeugdspelers toe
+SkillTable.addHomegrown=Voeg eigen jeugdspelers toe
 
-showTimeInClub=Laat tijd bij club zien
+SkillTable.showTimeInClub=Laat tijd bij club zien
 Filter=Filter
 button.up=Omhoog
 button.down=Omlaag
