--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -244,7 +244,7 @@ module.LeagueNewsFilter.desc=在联赛页面中筛选特定种类的新闻
 module.LeagueNewsFilter.all.desc=显示所有新闻
 module.LeagueNewsFilter.friendlies.desc=仅显示国际友谊赛以及教练变更
 module.LeagueNewsFilter.transfers.desc=仅显示转会
-module.LeagueNewsFilter.lineupChanges.desc=仅显示布阵改变
+module.LeagueNewsFilter.lineup_changes.desc=仅显示布阵改变
 #MoveManagerOnline
 module.MoveManagerOnline.desc=将地区页面中在线的经理向上移. 注意\! 如果超过100个玩家在线, 会很慢.
 module.TeamPopupLinks.TeamLinks.desc=给球队链接添加 TeamPopupLinks
@@ -535,13 +535,13 @@ categories.E2=额外二
 
 
 # SkillTable
-Skill_table=技能表
-Switch_view=切换视图
-AddHomegrown=添加青训产品球员
-showTimeInClub=显示在球队中的时间
-Switch_view.title=切换表格的视图
-skillTable.addHomegrown=添加所有青训产品球员
-skillTable.showTimeInClub=显示球员在球队中的时间
+SkillTable.header=技能表
+SkillTable.switchView=切换视图
+SkillTable.addHomegrown=添加青训产品球员
+SkillTable.showTimeInClub=显示在球队中的时间
+SkillTable.switchView.title=切换表格的视图
+SkillTable.addHomegrown.title=添加所有青训产品球员
+SkillTable.showTimeInClub.title=显示球员在球队中的时间
 skilltable.youthplayer=青年球员
 skilltable.rebought_youthplayer=回购的青年球员
 PlayerNumber=球员号码
@@ -659,7 +659,7 @@ notify.newMail=你有 %s 封新的邮件.
 #following string uses pluralForms
 notify.newForumMessage=有 %s 项致你的论坛回复.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -669,40 +669,40 @@ copy.ht-ml=复制 (HT-ML 格式)
 copy.table=复制表格 (HT-ML 格式)
 
 #copy
-copy.copyplayerad=复制球员广告
-copy.copied=已复制球员广告.
+copy.playerad=复制球员广告
+copy.playerad.copied=已复制球员广告.
 copy.matchid=将比赛 ID 复制到剪帖版
 
-copy.PostID=将帖子 ID 复制到剪帖版
-CopyPosting=以 %s 样式复制帖子
-CopyPosting.abbr=复制为 %s 样式
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=纯文本
-CopyPosting.style.last=上次
+copy.postid=将帖子 ID 复制到剪帖版
+copy.posting.title=以 %s 样式复制帖子
+copy.posting=复制为 %s 样式
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=纯文本
+copy.posting.style.last=上次
 
-CopyRatings.both=复制比赛评级 (HT-ML 格式)
-CopyRatings.home=复制主队比赛评级 (HT-ML 格式)
-CopyRatings.away=复制客队比赛评级 (HT-ML 格式)
-CopyRatings.copied=已复制比赛评级.
+copy.ratings.both=复制比赛评级 (HT-ML 格式)
+copy.ratings.home=复制主队比赛评级 (HT-ML 格式)
+copy.ratings.away=复制客队比赛评级 (HT-ML 格式)
+copy.ratings.copied=已复制比赛评级.
 
-CopyYouth.trainingReport=复制训练报告
-CopyYouth.trainingReport.copied=已复制训练报告.
-CopyYouth.scoutComment=复制球探评论
-CopyYouth.scoutComment.copied=已复制球探评论.
-CopyYouth.playerSource=复制球员源代码
-CopyYouth.playerSource.copied=已复制球员源代码.
-CopyYouth.fixturesSource=复制赛程源代码
-CopyYouth.fixturesSource.copied=已复制赛程源代码.
-CopyYouth.goto=前往 %s
+copy.trainingReport=复制训练报告
+copy.trainingReport.copied=已复制训练报告.
+copy.scoutComment=复制球探评论
+copy.scoutComment.copied=已复制球探评论.
+copy.playerSource=复制球员源代码
+copy.playerSource.copied=已复制球员源代码.
+copy.fixturesSource=复制赛程源代码
+copy.fixturesSource.copied=已复制赛程源代码.
+button.goto=前往 %s
 
-copy.copy.skilltable=复制技能表 (HT-ML 格式)
-copy.copied.skilltable=已复制技能表.
-copy.copied.matchid=已复制比赛 ID.
-copy.copied.postid=已复制帖子 ID [post\=%s].
-copy.copied.posting=已复制帖子 %s.
-copy.copySelected=使用 Ctrl-C 复制选择区域
-copy.operaPaste=使用 Shift-左键 粘贴
+copy.skilltable.title=复制技能表 (HT-ML 格式)
+copy.skilltable.copied=已复制技能表.
+copy.matchid.copied=已复制比赛 ID.
+copy.postid.copied=已复制帖子 ID [post\=%s].
+copy.posting.copied=已复制帖子 %s.
+specialCopy.hint=使用 Ctrl-C 复制选择区域
+specialPaste.hint=使用 Shift-左键 粘贴
 
 #matches
 matches.income=收入\:
@@ -714,7 +714,7 @@ matches.defense=防守
 matches.attack=攻击
 matches.indfreekick=间接定位球
 matches.wronglang=FoxTrick\: 由于你的语言没有注册或你在首选项中设置了错误的语言, 统计数据无法显示. 请确认你的 FoxTrick 语言与 Hattrick 语言相同.
-total_stars=总星数
+matches.lineup.totalStars=总星数
 
 #matchdetail
 match.ratings.midfield=中场
