--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -382,13 +382,13 @@ match.role.captain.abbr=Capt.
 match.player.unknown=Jogador desconhecido
 
 # SkillTable
-Skill_table=Tabela de habilidade
-Switch_view=Alternar o modo de exibição
-AddHomegrown=Adicionar jogadores da casa
-showTimeInClub=Mostrar hora no clube
-Switch_view.title=Alternar a exibição da tabela.
-skillTable.addHomegrown=Adicionar todos os jogadores vindos dos juniores da casa do time atual
-skillTable.showTimeInClub=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
+SkillTable.header=Tabela de habilidade
+SkillTable.switchView=Alternar o modo de exibição
+SkillTable.addHomegrown=Adicionar jogadores da casa
+SkillTable.showTimeInClub=Mostrar hora no clube
+SkillTable.switchView.title=Alternar a exibição da tabela.
+SkillTable.addHomegrown.title=Adicionar todos os jogadores vindos dos juniores da casa do time atual
+SkillTable.showTimeInClub.title=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
 skilltable.youthplayer=junior
 skilltable.rebought_youthplayer=Recomprou junior
 PlayerNumber=Número do jogador
@@ -491,7 +491,7 @@ links.custom.help=Ajuda
 notify.newMail=Você recebeu %s novas mensagens.;Você recebeu %s novos e-mails.
 #following string uses pluralForms
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -501,35 +501,35 @@ copy.ht-ml=Copiar em HT-ML
 copy.table=Copiar a tabela no HT-ML
 
 #copy
-copy.copyplayerad=Copiar anuncio de jogador para a area de transferencia
-copy.copied=O Jogador anunciado foi copiado para o Area de tranferencia
+copy.playerad=Copiar anuncio de jogador para a area de transferencia
+copy.playerad.copied=O Jogador anunciado foi copiado para o Area de tranferencia
 copy.matchid=Click para copiar o ID do jogo para a area de tranferencia
 
-copy.PostID=Copiar para Area de Tranferencia
-CopyPosting=Copiar postando no estilo %s
-CopyPosting.abbr=Copiar em estilo %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.last=último
+copy.postid=Copiar para Area de Tranferencia
+copy.posting.title=Copiar postando no estilo %s
+copy.posting=Copiar em estilo %s
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.last=último
 
-CopyRatings.both=Copiar notas (em HT-ML)
-CopyRatings.home=Copiar notas em casa (HT-ML)
-CopyRatings.away=Copiar notas fora (HT-ML)
+copy.ratings.both=Copiar notas (em HT-ML)
+copy.ratings.home=Copiar notas em casa (HT-ML)
+copy.ratings.away=Copiar notas fora (HT-ML)
 
-CopyYouth.trainingReport=Copiar Relatório de treinamento
-CopyYouth.trainingReport.copied=Relatório de treinamento foi copiado.
-CopyYouth.scoutComment=Copiar comentário do Olheiro
-CopyYouth.scoutComment.copied=Comentário do Olheiro foi copiado.
-CopyYouth.playerSource=Copiar características do jogador
-CopyYouth.playerSource.copied=Características do jogador foi copiada.
-CopyYouth.fixturesSource=Copiar fonte de jogos
-CopyYouth.fixturesSource.copied=Fonte de jogos foi copiado.
-CopyYouth.goto=Vá para %s
+copy.trainingReport=Copiar Relatório de treinamento
+copy.trainingReport.copied=Relatório de treinamento foi copiado.
+copy.scoutComment=Copiar comentário do Olheiro
+copy.scoutComment.copied=Comentário do Olheiro foi copiado.
+copy.playerSource=Copiar características do jogador
+copy.playerSource.copied=Características do jogador foi copiada.
+copy.fixturesSource=Copiar fonte de jogos
+copy.fixturesSource.copied=Fonte de jogos foi copiado.
+button.goto=Vá para %s
 
-copy.copy.skilltable=Copiar tabela de habilidades para a área de transferência (em HT-ML)
-copy.copied.skilltable=A tabela de habilidades foi copiada para a área de transferência.
-copy.copySelected=Copiar seleção com Ctrl + C.
-copy.operaPaste=Colar com Shift + clique esquerdo.
+copy.skilltable.title=Copiar tabela de habilidades para a área de transferência (em HT-ML)
+copy.skilltable.copied=A tabela de habilidades foi copiada para a área de transferência.
+specialCopy.hint=Copiar seleção com Ctrl + C.
+specialPaste.hint=Colar com Shift + clique esquerdo.
 
 #matches
 matches.income=Income\:
@@ -541,7 +541,7 @@ matches.defense=def
 matches.attack=ata
 matches.indfreekick=Falta Indireta
 matches.wronglang=Foxtrick\: As Estatisticas não podem ser exibidas porque seu idioma não esta registrado ou porque voce escolheu um idioma diferente nas preferencias. Por favor mude seu idioma no Foxtrick para o mesmo idioma do seu Hattrick.
-total_stars=Total de estrelas
+matches.lineup.totalStars=Total de estrelas
 
 #matchdetail
 match.ratings.midfield=Meio Campo
