--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -117,7 +117,7 @@ module.CopyYouth.ScoutComment.desc=Skavtov komentar
 module.PlayerBirthday.desc=Pokaže zadnje in prihajajoče rojstne dneve v pregledu igralcev
 module.LeagueNewsFilter.all.desc=Pokaži vse novice
 module.LeagueNewsFilter.transfers.desc=Pokaži samo prestope
-module.LeagueNewsFilter.lineupChanges.desc=Pokaži samo spremembe v postavitvi
+module.LeagueNewsFilter.lineup_changes.desc=Pokaži samo spremembe v postavitvi
 #MoveManagerOnline
 module.TeamPopupLinks.Matches.desc=Tekme
 module.TeamPopupLinks.Players.desc=Igralci
@@ -405,12 +405,12 @@ match.role.captain.abbr=Kapet.
 match.player.unknown=Neznan igralec
 
 # SkillTable
-Skill_table=Tabela sposobnosti
-Switch_view=Preklopi pogled
-AddHomegrown=Dodaj doma vzgojene igralce
-showTimeInClub=Pokaži čas v klubu
-Switch_view.title=Preklopi pogled tabele.
-skillTable.showTimeInClub=Pokaže čas, od katerega je igralec v članski ekipi
+SkillTable.header=Tabela sposobnosti
+SkillTable.switchView=Preklopi pogled
+SkillTable.addHomegrown=Dodaj doma vzgojene igralce
+SkillTable.showTimeInClub=Pokaži čas v klubu
+SkillTable.switchView.title=Preklopi pogled tabele.
+SkillTable.showTimeInClub.title=Pokaže čas, od katerega je igralec v članski ekipi
 skilltable.youthplayer=mladinec
 skilltable.rebought_youthplayer=ponovno kupljen mladinec
 PlayerNumber=Igralčeva številka
@@ -523,7 +523,7 @@ notify.newMail=Prejeli ste %s sporočilo.;Prejeli ste %s sporočili.;Prejeli ste
 #following string uses pluralForms
 notify.newForumMessage=Obstaja %s nov odgovor na forumu, namenjen vam.;Obstajata %s nova odgovora na foruma, namenjena vam.;Obstajajo %s novi odgovori na forumu, namenjeni vam.;Obstaja %s novih odgovorov na forumu, namenjenih vam.
 
-matchView.htLive=HT Live
+MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -535,25 +535,25 @@ copy.table=Kopiraj tabelo v HT-ML
 #copy
 copy.matchid=Kliknite, če želite kopirati matchID v odložišče
 
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.last=zadnje
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.last=zadnje
 
-CopyRatings.both=Kopiraj ocene (v HT-ML)
-CopyRatings.home=Kopiraj domače ocene (v HT-ML)
-CopyRatings.away=Kopiraj gostujoče ocene (v HT-ML)
-CopyRatings.copied=Ocene so bile kopirane v odložišče.
+copy.ratings.both=Kopiraj ocene (v HT-ML)
+copy.ratings.home=Kopiraj domače ocene (v HT-ML)
+copy.ratings.away=Kopiraj gostujoče ocene (v HT-ML)
+copy.ratings.copied=Ocene so bile kopirane v odložišče.
 
-CopyYouth.trainingReport=Kopiraj poročilo treninga
-CopyYouth.trainingReport.copied=Poročilo treninga je bilo kopirano.
-CopyYouth.scoutComment=Kopiraj skavtov komentar
-CopyYouth.scoutComment.copied=Skavtov komentar je bil kopiran.
-CopyYouth.playerSource=Kopiraj igralčevo izvorno kodo
-CopyYouth.playerSource.copied=Igralčeva izvorna koda je bila kopirana.
-CopyYouth.goto=Pojdi na %s
+copy.trainingReport=Kopiraj poročilo treninga
+copy.trainingReport.copied=Poročilo treninga je bilo kopirano.
+copy.scoutComment=Kopiraj skavtov komentar
+copy.scoutComment.copied=Skavtov komentar je bil kopiran.
+copy.playerSource=Kopiraj igralčevo izvorno kodo
+copy.playerSource.copied=Igralčeva izvorna koda je bila kopirana.
+button.goto=Pojdi na %s
 
-copy.copySelected=Kopirajte izbor s Ctrl + C.
-copy.operaPaste=Prilepite s Shift + levi klik.
+specialCopy.hint=Kopirajte izbor s Ctrl + C.
+specialPaste.hint=Prilepite s Shift + levi klik.
 
 #matches
 matches.income=Prihodki\:
@@ -565,7 +565,7 @@ matches.defense=obr
 matches.attack=nap
 matches.indfreekick=Indir. prosti streli
 matches.wronglang=FoxTrick\: Statistike ni mogoče prikazati, ker vaš jezik ni registriran ali, ker imate nastavljen napačen jezik v nastavitvah. Prosimo, prepričajte se, da je vaš jezik v FoxTricku enak jeziku v Hattricku.
-total_stars=Skupno zvezdic
+matches.lineup.totalStars=Skupno zvezdic
 
 #matchdetail
 match.ratings.midfield=Sredina
